--- a/share/locale/ae/locale_quest.txt
+++ b/share/locale/ae/locale_quest.txt
@@ -1,3 +1,6 @@
+13305	н« е–«! еб бѕня «бгЁ «Ќ б Ўбё ”—«Ќнњ
+13306	Ќ——дн гд Ё÷бя. б« н” ЎнЏ √Ќѕ г”«Џѕ нњ
+13307	√д  н« е–«! «б—ћ«Ѕ «бЌ’жб Џбм «бгЁ «Ќ!
 2	бёѕ √ќ»— я »яб ‘нЅ √Џ—Ёе Џд «бёж… «б н ”дЌ «ћ[ENTER]бе«° бёц «б ”ждџ г«ен.[ENTER][ENTER]енш« √”—Џ ж«»ЌЋ Џд «б“Џнг ”ждџ г«ен.[ENTER][ENTER]Џѕ гд ћѕнѕ ≈бм ед« »гћ—шѕ ћгЏя бћгнЏ «б√Ћж«».
 1	Ћж» ќ«’
 3	—ЁЏх ёжш я «б‘ќ’н…
@@ -829,6 +832,26 @@
 12585	бёѕ Ќ’б  Џбм ћгнЏ «б”—ќ” «бўб«гн.[ENTER]Џѕ »”—Џ… «б¬д ≈бм ‘«нџ—«».
 12591	б«  ” Џћбдн! Ќ м е–е «б”—ќ” «бўб«гн нЌ жн Џбм[ENTER]гЏ—Ё… Џбгн….[ENTER]Џѕ б«Ќё«р гд Ё÷бя ж√Ќ÷— бн д»« р« ћѕнѕр«.[ENTER]«б«” —«Ќ… «б≈ћ»«—н… «бг »ён…: %s
 12713	√д« ¬”Ё.[ENTER]бг √ёг »ЁЌ’ «б”—ќ” «бўб«гн «б√ќн— »«бя«гб Ќ м[ENTER]«б¬д.[ENTER]Џхѕ б«Ќёр« гд Ё÷бя.[ENTER]«б«” —«Ќ… «б≈ћ»«—н… «бг »ён…: %s
+13038	дЏг
+13039	ябш«
+13041	е–« «б«г— г «Ќ ЁёЎ ббё«∆ѕ.
+13042	«»ѕ√ «бё «б
+13043	«б≈” ”б«г
+13044	ќ—жћ
+13045	еб  —нѕ √д  »ѕ√ »—ћ "гЏ»ѕ «б√Ё«Џн" «бгЌ’дњ
+13046	гЏ»ѕ «б√Ё«Џн
+13047	еб  —нѕ гџ«ѕ—… е–« «бгя«дњ нгядя «бЏжѕ… Ќ м  »ѕ√[ENTER]«бгЏ—я….
+13048	”н г Ќб дгж–ћ гЏ»ѕ «б√Ё«Џн «б–н  г ≈д‘«ƒе. еб[ENTER] —нѕ «б«” ”б«гњ
+13056	нћ» √д няжд ћгнЏ √Џ÷«Ѕ «бгћгжЏ… Ён дЁ” «бгя«д.
+13061	«–е» ≈бм г” жм «б“Џнг.
+13062	Ќѕ«ѕ гЏ»ѕ «б√Ё«Џн
+13063	еб  —нѕ √д  –е» ≈бм г” жм «б“Џнгњ
+13064	Ќѕ«ѕ б Ќ”нд «бёЁ«“« 
+13065	г—Ќ»р«° нгяддн  Ќ”нд “жћ гд «бёЁ«“«  бя. б«  Ќ «ћ[ENTER]≈бм √н гж«ѕ √ќ—м! ЁёЎ √ЏЎдн «бёЁ«“«  б√Ќ”де«.[ENTER] Ќ”ндн бѕне дЁ”  √Ћн— бЁнЁ… «б»—я….
+13613	еб  —нѕ гџ«ѕ—… «б»—ћ «бгЌ’дњ
+13614	б« нгядя ≈Џ«ѕ…  Џннд ≈–д «бѕќжб «бќ«’ »я «б¬д.
+13615	еб  —џ» Ён ≈Џ«ѕ…  Џннд ѕќжбя ≈бм гЏ»ѕ «б√Ё«Џнњ
+13616	 г ≈Џ«ѕ…  Џннд ѕќжбя ≈бм гЏ»ѕ «б√Ё«Џн ≈бм 5.
 679	≈е“г ћд-ен
 678	«бЋ√— б «ћ— «бќж« г.
 680	≈д «бг—√… «бЏћж“ ёѕ Ўб»  гдя «бг”«Џѕ…: ≈д ’ѕнёе«°[ENTER] «ћ— «бќж« г° «џ нб гд Ў—Ё ћд-ен° дќ»… ё«”гн[ENTER]«бнгнд «б√»н÷. ёг »«бЋ√— б «ћ— «бќж« г »ё б 30 гд[ENTER]ћд-ен.
@@ -1358,6 +1381,30 @@
 989	ќх–° е« еж »бж— «бЎ«ё… «бќ«’ »я.  –я— »√д «бдћ«Ќ[ENTER]г÷гжд б√жб гЌ«жб… ЁёЎ. Ё«бянгн«Ѕ нЏ »— Џцбг гбнЅ[ENTER]»«бгЁ«ћ¬ ° ж»«б «бн Ё≈д  џнн—«  »”нЎ… нгяде« √д[ENTER] хЁ‘б «бЏгбн…! «Ќ г«б«  »”нЎ… Ён джЏе« бяде«[ENTER] —«Ёё яб Џгбн… ж ћЏбе« Џх—÷… б«Ќ г«б «бЁ‘б.
 990	бёѕ Ё‘б  «бЏгбн…. бг √дћЌ гЏ «б√”Ё Ён ’хдЏ »бж—[ENTER]«бЎ«ё…. ≈д  ёдн н —«∆Џ…° бяд «бЏгбн… »Ќѕ –« е«[ENTER] яжд ѕ«∆г«р гбн∆… »«б√ќЎ«—. гг« н ”»» Ён Ё‘б[ENTER]«бќЎ…. √ўд √дд« ”дхжЁё Ён «бгЌ«жб… «бгхё»б…!
 991	бёѕ  д»√  »е–«! б« гЋнб б ёдн н![ENTER]ќ– е« еж »бж— «бЎ«ё….[ENTER]≈де« Ќёш«  хЌЁ…! еб  ‘Џ— »«бёж…њ
+13540	еб  —нѕ ѕќжб гЏ»ѕ «б√Ё«Џнњ
+13014	√ѕќб гЏ»ѕ «б√Ё«Џн
+13020	«б«” Џѕ«ѕ«  «бе«г…
+13021	нћ» √д √ћѕ  гЋ«б «б√ЁЏм бѕќжб гЏ»ѕ «б√Ё«Џн.
+13022	” Ќ «ћ ≈бм Џѕ… √‘н«Ѕ бб ёѕг Ён е–««б»—ћ «бгЌ’д[ENTER] Ќ  «б√—÷ ... ”няжд гд «б”еб «” ќѕ«г ё»Џ… √ж ”жЎ[ENTER]√ж ян” —гб »Ќћг гд«”» ббяд“. нгяддн ’дЏ е–е[ENTER]«б√‘н«Ѕ гд √ћбя.
+13023	жбяд ≈–« яд   —џ» Ён ѕќжб «бгЏ»ѕ° ЁЏбня «бЌ’жб[ENTER]Џбм %d Ќ—«‘Ё √ЁЏм ббЏ «ѕ. жб√д «б»Ўб «б «∆» еж[ENTER]ЁёЎ гд нгяде «бдћ«ќ° Ё≈д е–« ”нябЁя %d н«дџ. еб[ENTER]нгядя ≈Ќ÷«— ябнег«њ
+13024	нЎб»  гЋ«б «б√ЁЏм %d Ќ—«‘Ё √ЁЏм. нгядя «бЏЋж—[ENTER]Џбне« бѕм «бжЌж‘ «бё—н»….
+13025	бѕќжб гЏ»ѕ «б√ЁЏм° √Ќ «ћ ≈бм «бЌ’жб Џбм %d Ќ—«‘Ё[ENTER]«б√ЁЏм «б н нЌ «ће«  гЋ«б «б√ЁЏм.[ENTER]«бЏѕѕ «бг »ён: %d
+13026	√Ќ «ћ «бг“нѕ гд Ќ—«‘Ё «б√ЁЏм...
+13027	бёѕ Ќ’б  Џбм Ќ—«‘Ё «б√ЁЏм. «б»джѕ «бгћгжЏ…: %d
+13028	е–е ен ћгнЏ Ќ—«‘Ё «б√ЁЏм «б н нЌ «ће«  гЋ«б[ENTER]«б√ЁЏм. ≈—ћЏ ≈бне.
+13029	бѕн ћгнЏ Ќ—«‘Ё «б√ЁЏм «б%d! нћ» √д √Џжѕ ≈бм  гЋ«б[ENTER]«б√ЁЏм.
+13030	еб бѕня ћгнЏ Ќ—«‘Ё «б√ЁЏмњ «–« б« “б  »Ќ«ћ… ≈бм[ENTER]%d н«дџ ж”√гдЌя ≈гя«дн… «бж’жб ≈бм «бгЏ»ѕ.
+13031	”бг ябнег«
+13032	≈бџ«Ѕ
+13033	√д  б«  гбя «бг«б «бя«Ён...
+13034	гг «“. яб ‘нЅ  г! е« ен «б√‘н«Ѕ «бќ«’… »я° Ќў[ENTER]”Џнѕ. ≈–« яд  »Ќ«ћ… ≈бм «бг“нѕ гд «бЏ «ѕ б—Ќб…[ENTER]«” я‘«Ён… ћѕнѕ…° ЁёЎ Џѕ ≈бнш.
+13035	’дЏ
+13036	«бѕќжб
+13037	еб  —нѕ ѕќжб гЏ»ѕ «б√Ё«Џнњ б« н“«б бѕня %d ѕќжб« [ENTER]г «Ќ….
+13040	еб  —нѕ ≈д‘«Ѕ дгж–ћ бЏ»ѕ «б√Ё«Џнњ
+13049	б« нгядя «бѕќжб г—… √ќ—м «бнжг.
+13055	б« нгядя ≈д‘«Ѕ дгж–ћ ћѕнѕ Ќ м  ћгЏ яб «бгя«Ё¬ .
+13182	Ќ—«‘Ё «б√ЁЏм «бг »ён…
 992	Ќ«—” ”«Ќ… «ббЏ»
 993	еб  —нѕ гџ«ѕ—… ”«Ќ… «ббЏ» «б¬дњ
 994	еб  —нѕ «б–е«» ≈бм ”«Ќ… «ббЏ»њ
@@ -1626,6 +1673,17 @@
 10167	ёг »«” ќѕ«г «бдћг «б—жЌн бќЁ÷ «бЎ«ё… Ён гЏ»ѕ[ENTER]“жѕн«я ё»б √д  ’»Ќ ёжн… ћѕ«. ” ёжг »«” еб«я «бдћг[ENTER]«б—жЌн »‘яб  бё«∆н Ќ«б ѕќжбя «бгЏ»ѕ. «д »е: б«[ENTER]нгяд ≈де«Ѕ «бгег… Ён Ќ«б ёг  » ЁЏнб —г“ «бЌ—«”.
 10168	√дћ“ е«! Џѕ ≈бм «б—«е» гнб»жд б Ќ’б Џбм ћ«∆“ я.
 10169	‘я—«р° бёѕ √’»Ќ «бгЏ»ѕ ¬гд« Ён «бжё  «б—«ед. ќ–[ENTER]е–е гхя«Ё∆ я. гЏ –бя° ” “ѕ«ѕ «бЎ«ё… гћѕѕ«. Џѕ »Џѕ[ENTER]г÷н 24 ”«Џ… б ёжг »ќЁ÷е« г—… √ќ—м »«” ќѕ«г «бдћг[ENTER]«б—жЌн. »«бЎ»Џ ” Ќ’б Џбм ћ«∆“… √ќ—м Ќнде«.
+13586	«ѕќб «б»—ћ «бгЌ’д «бџ«г÷
+13587	г–»Ќ џ«г÷
+13588	н« е–«! √Џбг √ддн  Ќжб  ≈бм Ќћ— ≈д бЏд… ”ждџ г«ен[ENTER]ен «бг”ƒжб…! бяддн ‘«г«д жнгяддн √д √ќ»—яг Џд[ENTER]гя«д гЋн— бб«е г«г...[ENTER]≈–« я«д бѕня  –я—… џ«г÷… нгяддн «’ЎЌ«»я ≈бм »—ћ[ENTER]гЌ’д џ«г÷.[ENTER]еб  —нѕ √д  ћ—»њ
+13589	дЏг
+13590	ябш«
+13591	¬е! б« нгяддн «б”г«Ќ бя »«бѕќжб »ѕжд  –я—… џ«г÷….
+13598	б« нгядя «бѕќжб «б¬д.
+13609	«бќ—жћ
+13610	еб  —нѕ гџ«ѕ—… «б»—ћ «бгЌ’дњ
+13611	дЏг
+13612	ябш«
 1209	—Ё÷
 1208	бг«  »янњ
 1210	”√”«Џѕя »Ў»нЏ… «бЌ«б. ≈д «бгег… бн”  »«б’Џ»… ≈бм[ENTER]е–« «бЌѕ° ж≈дн √ Ёег √дя  —џ» Ён «” —ћ«Џ «б –я«—.[ENTER]≈бм «ббё«Ѕ!
@@ -7628,6 +7686,15 @@
 12707	Ќ’б  Џбм %d ≈я”н— «б‘г” (’)
 12708	≈–е» ≈бм »«∆Џ «бѕ—жЏ бб√Ќ Ё«б.
 12709	бёѕ Ќ’б  Џбм %d Ќћ— «бЎёж”.
+12971	ж«ѕ ќЁн
+12972	ед«я ‘«∆Џ«  »√де  г «бЏЋж— Џбм ж«ѕ ћѕнѕ. ≈–е» ≈бм[ENTER]яждЁж‘нж”.
+12973	бг д— »Џ÷д« «б»Џ÷ гд– Ё —…. «нд яд  Ён  бя[ENTER]«б«н«гњ  г «бЏЋж— Џбм «бгя«д «б”—н «б–н я«д нЌн—я[ENTER]Ён «б”«»ё.
+12974	”гЏ  √д «бЎ—нё ≈бм ед«я г Џ—ћ… жџ«ѕ—…. √жѕ √д[ENTER]√Ўб» гдя «б–е«» ≈бм ед«я жгЏ—Ё… «бг“нѕ Џд е–«[ENTER]«бж«ѕн «бќЁн. »гћ—ѕ ж’жбя° ” б ён »«бЌ«—” «б–н[ENTER]√—”б е ≈бм ед«я гд– Ё —….
+12975	 г Ё Ќ гдЎё… ћѕнѕ…. «–е» ≈бм Ќ«—” «б√Ё«Џн.
+12976	геб«° бг«–«  ёЁ ед«њ ≈–« –е»  ≈бм ”еб ѕждћ ћж«дћ°[ENTER]нгядя «бж’жб ≈бм «бгдЎё… «бћѕнѕ… гд ед«я.
+12977	 жће ≈бм «бгдЎё… «бћѕнѕ… бгё«»б… Ќ«—” «б√Ё«Џн.
+12978	гд √д њ е«е° еб √—”бя яждЁж‘нж”њ б« нгядя √д  яжд[ENTER]ћ«ѕр«... бг«–« √—”б г» ѕ∆р« гЋбя ≈бм гя«д ’Џ» гЋб[ENTER]е–«њ
+12979	жЎб» гдшн яждЁж‘нж” √д √”бшгя е–« Џдѕг«  ’б ≈бм[ENTER]ед«. Џѕ б«Ќёр«° б« н“«б бѕня жў«∆Ё ббён«г »е«.
 6353	Ќн«… ћѕнѕ…
 6354	 ” нёў гд джг Џгнё ж ‘Џ— »ѕЁ∆ ‘Џ— яЋнЁ. г« «б–н[ENTER]ЌѕЋњ гд √д њ «»ЌЋ Џд гнждеж—«дџ «бЌянг. ≈де[ENTER]”нхЁ”ш— бя г« ЌѕЋ.
 6355	г—Ќ»р« »я н« бня«д—!
@@ -7965,11 +8032,11 @@
 6606	гћгжЏ «бдё«Ў
 6607	√Џбм гћгжЏ дё«Ў Ён «бћжб…
 6608	”нЌ’б «бб«Џ»жд «бЏ‘— «б√ж«∆б Џбм ћж«∆“ ≈÷«Ён….
-6610	«бг—я“ 1: %sx %d
+6610	«бг—я“ 1: %s %d x
 6609	√џбё
-6611	«бг—я“ 2: %sx %d
-6612	«бг—я“ 3: %sx %d
-6613	«бг—я“ 4 ≈бм 10: %sx %d
+6611	«бг—я“ 2: %s %d x
+6612	«бг—я“ 3: %s %d x
+6613	«бг—я“ 4 ≈бм 10: %s %d x
 6614	«б— »… 1: %s° %d
 6615	«б— »… 2: %s° %d
 6616	«б— »… 3: %s° %d
@@ -8048,7 +8115,7 @@
 12644	бн” бѕня н«дџ я«Ён.
 12645	√Ќ÷— бн »Џ÷ »бж— «бг« нд.
 12646	е–« «б»дѕ ќ«ЎнЅ.
-12647	 е«днд« «бЌ«—…!  г  Џбгн… «б’ёб »дћ«Ќ.
+12647	 е«днд« «бЌ«—…!  г  Џгбн… «б’ёб »дћ«Ќ.
 12648	¬е б«! бёѕ Ё‘б  Џгбн… «б’ёб.
 12524	 г ≈џб«ё ћгнЏ «бгЌб«  «б ћ«—н… »”»» «б√÷—«—.
 12525	√нд «бќнжбњ
@@ -9808,6 +9875,12 @@
 12080	≈бџ«Ѕ
 12081	 г ≈Џ«ѕ…  Џннд «бёнг «бќ«’… »я.
 12082	бн” бѕня √н ёнг нгяд ≈Џ«ѕ…  Џннде«.
+13057	бёѕ √ягб  гЏ»ѕ «б√Ё«Џн »дћ«Ќ жнгядя «бЌ’жб Џбм «бгя«Ё¬  «бќ«’… »я.  ЌѕЋ ≈бм  гЋ«б «б√ЁЏм.
+13058	«Ќ’б Џбм «бгя«Ё¬ 
+13059	 гЋ«б «б√ЁЏм
+13060	бёѕ е“г  яб е–е «б√Ё«Џн «б‘—н—…. √д   ” Ќё е–«[ENTER]«б’дѕжё.
+13606	бёѕ  бён  %dx яд“ «б√ЁЏм.
+13607	бёѕ  бён  %dx џ»«— «б√ЁЏм.
 8044	≈д г” ж«я г« “«б ÷ЏнЁ«р!
 8045	б« нгядя «б—яж» Џдѕг«  яжд Ён Ќ«б…  Ќжб!
 8046	≈дя —«я» Ќ«бн«р! ≈–« яд   —џ» Ён  џнн— «бЌ’«д нћ»[ENTER]√д  д“б гд Ёжёе √жб«р.
@@ -9951,6 +10024,48 @@
 11499	б«° ”√ўб ед«.
 11500	бёѕ Џ«ѕ «б днд «б√“—ё (Ё.“)!
 11679	”н г дёб ћгнЏ «бгхё« бнд гд яеЁ «ббЏд… (Ё.“) Ён[ENTER]џ÷жд Ћб«Ћ ѕё«∆ё гд «б¬д.
+12980	г« еж гЏ»ѕ «б√Ё«Џнњ
+12981	ббЏЋж— Џбм «бгЏ»ѕ «бќЁн° нћ» √д √ ЌѕЋ ≈бм Ќ«—”[ENTER]«б√Ё«Џн.
+12982	н« г» ѕнЅ. б« √Џ—Ё яг √д  ж«”Џ «бЌнб… »Џѕ. ≈–«[ENTER]« »Џ  Ў—нё «бж«ѕн ќбЁн° ” ’б ≈бм гЏ»ѕ ÷ќг. еб[ENTER]”гЏ  гд ё»б Џд гЏ»ѕ «б√Ё«Џнњ
+12983	”жЁ  ’Ўѕг »гћгжЏ… гд «бжЌж‘ «бќЎ—…. √—«ед √де бд[ENTER]н” џ—ё гдя √яЋ— гд ѕёнё… Ќ м  џ«ѕ—. жбяд ≈–« я«д [ENTER]бѕня «б‘ћ«Џ…° нгядя «бЏЋж— Џбм «бяд“ ед«я.
+12984	янЁ √ѕќбњ
+12985	е« е« е«! б« нгядя –бя° ≈б« ≈–« ”гЌ  бя »«бѕќжб.[ENTER]”√ќ »— ‘ћ«Џ я.
+12986	  √бё Џнд«я Ќ—Ёнр« »Ќг«” ббЏгб! —»г« нгядя ё б[ENTER]»Џ÷ «бжЌж‘ Ён «бгдЎё… гд √ћбн! бёѕ √’»Ќ гд «б’Џ»[ENTER]»Џ÷ «б‘нЅ ≈»ё«Ѕ е–е «бгдЎё…  Ќ  «б”нЎ—….
+12987	ёг »«’Ўн«ѕ «бжЌж‘ «бё—н»… б дћЌ Ён «ќ »«— Ќ«—”[ENTER]«б√Ё«Џн.
+12988	Ќ«—” «б√Ё«Џн н—нѕя √д  ’Ў«ѕ %d жЌ‘ Ён гг— ннб«ѕ.[ENTER]«бжЌж‘ «бг »ён…: %d
+12989	геб«° √д  бг   Џ«гб гЏ е–е «бжЌж‘... еб  ” ”бгњ
+12990	бёѕ ё б  яб «бжЌж‘ гд √ћб Ќ«—” «б√Ё«Џн. нћ» √д[ENTER]√Џжѕ ≈бне.
+12991	бёѕ ё б  яб «бжЌж‘ гд √ћб Ќ«—” «б√Ё«Џн. нћ» √д[ENTER]√Џжѕ ≈бне.
+12992	¬е. √д  Ён «бж«ёЏ  »ѕж √яЋ— ‘ћ«Џ… гг« яд  √Џ ёѕ.[ENTER]г‘«еѕ я ж√д   ё« б гд »Џнѕ° –я—дн »‘»«»н.
+12993	Џбм √н Ќ«б. ≈бня гя«Ё√… «ћ н«“ «б«ќ »«—.
+13180	«бжЌж‘ «бг »ён…
+13603	бёѕ ёг  »ё б %d жЌ‘. «бЏѕѕ «бг »ён: %d
+12994	гЏ»ѕ «б√Ё«Џнњ!
+12995	 г «я ‘«Ё гдЎё… ћѕнѕ…. нћ» √д √–е» ≈бм Ќ«—”[ENTER]«б√Ё«Џн «б–н н—«ё» е–« «бгя«д.
+12996	н« г» ѕнЅ. н»ѕж √дя  —нѕ «б–е«» ≈бм е–« «бж«ѕн...
+12997	≈–« яд   —нѕ «б–е«» ≈бм «бж«ѕн° Ё√д« √—нѕя √д[ENTER] ёѕг бн гЏ—жЁр« √жб«р!  ”»» «бжЌж‘ Ён «бгдЎё…[ENTER]«бяЋн— гд «бг «Џ» Ён «бжё  «бЌ«бн. жнгяддн Ќёр«[ENTER]«” ќѕ«г г”«Џѕ я ед«я.
+12998	√—нѕя √д  ё б е–е «бжЌж‘ ж Ќ÷— бн »Џ÷ »—«ѕ…[ENTER]«бЌѕнѕ. нгядя √д  ЁЏб –бя бнњ »ёѕ— г« √Џ—Ё° нгяд[ENTER]√н÷р« «” ќѕ«г »—«ѕ… «бЌѕнѕ бя”» √гж«б ћнѕ….
+12999	дЏг.
+13000	б«.
+13001	Ќ”др«° √ќ‘м √де б« нгядя «бд“жб ≈бм «бж«ѕн √н÷р«!
+13002	√Ќ’б Џбм %d »—«ѕ… «бЌѕнѕ° ж«б н нЌ «ће« Ќ«—”[ENTER]«б√Ё«Џн. нгядя «бЏЋж— Џбне« бѕм «бжЌж‘ «бё—н»….
+13003	г«–«° бёѕ  гяд  гд ћгЏ яб ‘нЅњ н« е–«! √Џ ёѕ √дя[ENTER]√ќЎ√  Ён «бЌ”«». √д« ёб  %d!
+13004	нЎб» Ќ«—” «б√Ё«Џн %d »—«ѕ… «бЌѕнѕ бб”г«Ќ бн[ENTER]»«бг—ж— Џ»— «бж«ѕн. нћ» √д √’Ў«ѕ «бжЌж‘ »«бё—» гд[ENTER]гг— ннб«ѕ ббЌ’жб Џбм »—«ѕ… Ќѕнѕн….[ENTER]»—«ѕ… «бЌѕнѕ «бг »ён…: %d
+13005	бёѕ Ќ’б  Џбм »—«ѕ… «бЌѕнѕ. «бЏѕѕ «бгћгжЏ: %d
+13006	бѕн яб »—«ѕ… «бЌѕнѕ «б н н—нѕе« Ќ«—” «б√Ё«Џн. нћ»[ENTER]√д √Џжѕ ≈бне.
+13007	бѕн яб »—«ѕ… «бЌѕнѕ «б н н—нѕе« Ќ«—” «б√Ё«Џн. нћ»[ENTER]√д √Џжѕ ≈бне.
+13008	√же° бёѕ Џбг  √дя ќбё  гд √ћб «бжўнЁ…! е–« еж[ENTER]«б—ёг «б’ЌнЌ!
+13009	Ќ”др«° ”√”«Џѕя Ён Џ»ж— «бж«ѕн «б¬д. »гћ—ѕ ж’жбя[ENTER]≈бм «бћ«д» «б¬ќ—° ” —м гЏ»ѕр« я»н—р«. ≈–« яд [ENTER] —нѕ «б–е«» ≈бм ед«я б«Ќёр«° Ё«—ћЏ ≈бн.
+13010	нгядя «бж’жб ≈бм гЏ»ѕ «б√Ё«Џн гд ќб«б Ќ«—”[ENTER]«б√Ё«Џн.
+13011	¬е° е« √д  гд ћѕнѕ. еб  —нѕ «бѕќжбњ
+13012	Ћг гд Ё÷бя √Ќ÷— бн »—«ѕ… «бЌѕнѕ «б н ћгЏ е« бн Ён[ENTER]«бг—… «б√ќн—… ж”√ЏЎня  –я—…. е–е «бг—… дЌд »Ќ«ћ…[ENTER]≈бм %d »—«ѕ… «бЌѕнѕ.
+13013	гЏ»ѕ «б√Ё«Џнњ! ( я—«—)
+13015	еб  —нѕ ѕќжб гЏ»ѕ «б√Ё«Џнњ
+13016	гж«Ёё
+13017	≈бџ«Ѕ
+13018	 ЌѕЋ ≈бм Ќ«—” «б√Ё«Џн бѕќжб гЏ»ѕ «б√Ё«Џн.
+13019	е–« «бж«ѕн ќЎн— ћѕ«. яд Ќ–—«р ≈–«р.
+13181	»—«ѕ… «бЌѕнѕ «бг »ён…
 8167	»х—ћ «бдгн—
 8168	 Ёш÷шбж« ж«ѕќбж« ≈бм »х—ћ «бдгн—. нхгядяг «б»ё«Ѕ[ENTER]бгѕ… ”«Џ… гд «б“гд я√ё’м Ќѕ. ёѕ  ѕжг гѕ… «б«д ў«—[ENTER]Џдѕ «д е«Ѕ √ж ≈бџ«Ѕ «бгџ«г—… √—»Џ ”«Џ«  ё»б[ENTER]«бѕшќжб гд ћѕнѕ.
 8169	«е“гхж« ћгнЏ «б√Џѕ«Ѕ!
@@ -11793,6 +11908,62 @@
 12884	бёѕ ѕг—  яб √Ќћ«— г« нд ћнд. ‘«—я «бж÷Џ «бЌ«бн гЏ[ENTER]яждЁж‘нж” Ён ѕждћ ћж«дћ.
 12885	«—ћЏ ≈бм яждЁж‘нж” ж√ќ»—е »г« нћ—н.
 12886	бёѕ  г ≈÷Џ«Ё дЁж–е«° бяд е–« бд няжд я«Ён«р. бяд[ENTER]яб ‘нЅ гег. бѕн еѕн… ’џн—… бя б√ўе— бя «г д«дн.
+12914	»бѕ џн— гЏ—жЁ
+12915	Џдѕг«  дёб  бгЏ—Ё… «бг“нѕ Џд е–е «б≈‘«Џ… «бџ—н»…°[ENTER]«д ем »н «бгЎ«Ё Ён »бѕ џн— гЏ—жЁ. нћ» √д дбён[ENTER]дў—… Ё«Ќ’… ед« бгЏ—Ё… г« ≈–« я«д е–« «бгя«д еж[ENTER]г’ѕ— «б‘«∆Џ« .
+12916	√—м ‘ќ’р« »Џнѕр« ед«я. нћ» √д д Џ«гб »Џд«н….
+12917	ед«я ‘ќ’ г ж — нћб” Ён «б“«жн…. нћ» √д д ЌѕЋ гЏе.
+13541	 г  ≈÷«Ё… гег… ћѕнѕ….
+12918	‘ќ’ џ—н»
+12919	«–е» ≈бм «б‘ќ’ «бџ—н» ж ЌѕЋ гЏе.
+12920	н« ббежб!
+12921	гд √д њ! янЁ ж’б  ≈бм ед«њ
+12922	н« е–«! гд √д њ √д« ’«∆ѕ ћж«∆“ жёѕ √ н  ≈бм ед«[ENTER]б  »Џ «б‘«∆Џ«  ≈бм е–е «бё—н…. еб  жѕ –бя √н÷«њ[ENTER]Ќ”др«° √Ќ «ћ ≈бм «б Ќёнё Ён ‘нЅ г« ед«. ≈–«[ENTER]”«Џѕ дн° Ё”н”Џѕдн √д √ќ»—я »г« «я ‘Ё е Ќ м «б¬д.
+12923	—Ё÷
+12924	”√”«Џѕя.
+12925	н« бя гд ћ»«д...
+12926	√Џ ёѕ √д ‘н∆р« я»н—р« нЌѕЋ ед«. нћ» √д дбён дў—…[ENTER]Ќжбд« √жб«р ждё б «бћджѕ «бЁ«”ѕнд. дў—р« бќЎж—…[ENTER]«б√г— ед«я° ”дб ён г—… √ќ—м ед« »Џѕ –бя.
+12927	«ё б «бћджѕ «бЁ«”ѕнд.[ENTER]«бќ’жг «б»«ёжд: %d
+12928	б«  х÷нЏ «бжё ! бд √ќ»—я »√н ‘нЅ ≈–« жёЁ  ед«.
+12929	бёѕ ё б  яб «бћджѕ «бЁ«”ѕнд жнћ» √д √Џжѕ ≈бм ’«∆ѕ[ENTER]«бћж«∆“.
+12930	√Ќ”д . ќ– е–е гя«Ё√ я. ”√я ‘Ё янЁ нћ» √д дг÷н[ENTER]ёѕг«. Џѕ гхћѕшѕ«р Ён жё  б«Ќё.
+12931	≈‘«Џ… џ—н»…
+12932	нћ» √д √”√б ’«∆ѕ «бћж«∆“ Џд ‘«∆Џ… гг— ннб«ѕ.
+12933	 »ѕж «б√гж— «б¬д √яЋ— ж÷жЌр«. «б«‘«Џ…њ! янЁ  Џ—Ё[ENTER]Џде«њ нжћѕ г–»Ќ ќЁн ед« жед«я жЌ‘ ёжн ббџ«н…[ENTER]ед«я. н»ѕж √дя  Џ—Ё »«бЁЏб е–е «б‘«∆Џ…. Ќ”др«°[ENTER]ѕЏдн √ќ»—я »‘нЅ ¬ќ—.
+12935	еб г« ж« ћгнЏ«њ
+12936	бн”  г«гр«° бёѕ »дж« гЏ»ѕ «б√Ё«Џн ж√’»Ќж« √ёжм[ENTER]ед«я. еѕЁн еж ё б “Џнгег ж«бЌ’жб Џбм «бгя«Ё√….[ENTER]бяд н’Џ» «бж’жб ≈бне »”»» жћжѕ Ќ«—” »«бё—» гд[ENTER]«бг–»Ќ. ≈–« яд   —нѕ° еб нгядя г”«Џѕ н Ён гЎ«—ѕ…[ENTER]е–е «бжЌж‘њ гд «б’Џ» Ќёр« «ќ —«ё ’ЁжЁег жЌѕя.
+12937	бн” «б«д.
+12938	яд  √Џбг √дя бд  ќ–бдн. нѕ «бг”«Џѕ… ѕ«∆г« ћнѕ….[ENTER]«–« ѕЏжд« д‘ё Ў—нёд« ≈бм «бг–»Ќ.
+12939	нћ» √д √ё б «бгЌ«—»нд «бЁ«”ѕнд б генѕ «бЎ—нё.[ENTER]«бжЌж‘ «бг »ён…: %d
+12940	янЁ н»ѕж «б√г— бяњ √н  ёѕг Ќ м «б¬дњ б« н»ѕж[ENTER]«б√г— я–бя... «б—ћ«Ѕ √”—Џ° бн” бѕнд« «бяЋн— гд[ENTER]«бжё .
+12941	бёѕ «’Ўѕ  яб «бгЌ«—»нд «бЁ«”ѕнд жгеѕ  «бЎ—нё. нћ»[ENTER]√д √Џжѕ ≈бм ’«∆ѕ «бћж«∆“.
+12942	 г ё б ћгнЏ «бгЌ«—»нд «бЁ«”ѕнд. Џхѕ ≈бм ’«∆ѕ[ENTER]«бћж«∆“.
+12943	√Ќ”д . нгяддн «б¬д √д √—м Ў—нёд«. ѕЏд« дд ёб[ENTER]»”—Џ… ≈бм «бгдЎё… «б «бн…. н»ѕж √дд« дё —» гд[ENTER]гбћ√ег.
+12966	еб нгядднњ
+12967	Ќ”др«° Џѕ ≈бм «бќбЁ. бяд нгядя ѕ«∆гр« «бЏжѕ… ≈бнш[ENTER]≈–« џн—  —√ня.
+12944	г–»Ќ ќЁн
+12945	√Џ ёѕ √де нгяддн »«бЁЏб —ƒн… ‘нЅ гд «бг–»Ќ «бќЁн.[ENTER]«бЏжѕ… ≈бм ’«∆ѕ «бћж«∆“ »”—Џ….
+12946	дЏг° е–« ’ЌнЌ! »Џѕ √д ‘ёё  Ў—нён Џ»— яб «бжЌж‘°[ENTER]ж’б  ≈бм «бг–»Ќ. бяд «бЌ«—” бг н”гЌ бн »«бѕќжб.[ENTER] ж”б  ≈бне Џѕ… г—« ° бяд «б√г— бг ндћЌ жбг няд[ENTER]бѕн ќн«— ”жм «б«б Ё«Ё. бяд «б¬д бѕн Ё—’… √ќ—м[ENTER]‘я—« бя! ѕЏжд« дг÷н ёѕг« гЏ«.
+12947	б« «” ЎнЏ »Џѕ «б«д.
+12948	ћншѕ.
+12949	г«–«° «д   д”Ќ» »«бЁЏбњ √д  √÷ЏЁ »яЋн— гг« яд [ENTER]√Џ ёѕ.
+12950	≈–« ћгЏд« √дЁ”д« гЏр«° Ёнгядд« «бён«г »–бя. ѕЏд«[ENTER]дќ—ћ »Џ÷ «бжЌж‘ гд «бЎ—нё «бё—н».
+12951	«ё б «б—е»«д «бЁ«”ѕнд бг”Ќ ¬ќ— «г ѕ«ѕ.[ENTER]«бќ’жг «б»«ёжд: %d
+12952	еб ” ” ”бг »«бё—» гд ќЎ «бде«н…њ нгяддн √д √ЏЎня[ENTER]Ќ’… гд џднг н. ен«.
+12953	 г ё б ћгнЏ «б—е»«д «бЁ«”ѕнд. Џхѕ ≈бм ’«∆ѕ[ENTER]«бћж«∆“.
+12954	√” ЎнЏ √д √—м гд »Џнѕ «бЌ«—” «б–н нЌ—” гЏ»ѕ[ENTER]«б√Ё«Џн. √Џ ёѕ √дд« »Ё÷бяг ”д гяд гд «бж’жб ≈бм[ENTER]гѕќб «бг–»Ќ.
+12955	 ”бб
+12956	бёѕ ЏЋ—  Џбм «бг–»Ќ. нћ» √д √дў— Ќжбн ж√я ‘Ё гя«д[ENTER]«бЌ«—”.
+12957	бёѕ жћѕ  «бг–»Ќ √ќн—р«. ‘я—« бя бён«гя »е–« гЏн.[ENTER]«б¬д нгядд« «б ”бб ќбЁ «бЌ«—”Ї ≈бм ЌнЋ нќ »∆[ENTER]«бё«∆ѕ жгЏ—Ё… г« нћ—н ед«я. гЏ –бя° √ќ‘м √д н—жд«[ENTER]≈–« »ёнд« гЏр«. б–« √ё —Ќ √д ддЎбё »‘яб гдЁ’б[ENTER]ждЌ«жб ћгЏ »Џ÷ «бгЏбжг«  «бгЁнѕ… Џбм Ўжб «бЎ—нё.
+12958	бёѕ я«д –бя я«Ён« »«бд”»… бн.
+12959	е« дЌд –«!
+12960	дЌд Џбм ж‘я «б«д е«Ѕ. гд Ё÷бя Ёя— г—… √ќ—м.
+12961	¬гб √д дж«’б »дЁ” «бёж… Џдѕг« дб ён г—… √ќ—м.
+12962	 ”бб ќбЁ Ќ«—” «бг–»Ќ ≈бм гЏ»ѕ «б√Ё«Џн ж«я ‘Ё г«[ENTER]нЌѕЋ Ён «бѕ«ќб. ≈’Ўѕ 30 гд ћджѕ я«»«.[ENTER]«бжЌж‘ «бг »ён…: %d
+12963	бг  џ«ѕ— »Џѕњ ≈–« —»г« ”√дЎбё.
+12964	 г «я ‘«Ё гЏ»ѕ «б√Ё«Џн ж г «’Ўн«ѕ 30 ћдѕнр« гд[ENTER]ћджѕ я«»«. Џхѕ ≈бм ’«∆ѕ «бћж«∆“.
+12965	бёѕ яхд  гх √яшѕр« »√дя ” ЁЏб –бя! √бён  дў—…[ENTER]”—нЏ… Џбм «бѕ«ќб° бяд б”жЅ «бЌў бг √ћѕ «бё«∆ѕ.[ENTER]Ќ”д«° ея–« еж «б√г—. —»г« Ќ’б  Џбм «бЏѕѕ «бб«“г[ENTER]Ён «бг—… «бё«ѕг…. Џбм √н Ќ«б° бёѕ дћЌ  ед« »Ё÷бя[ENTER]ЁёЎ ж√—нѕ √д √я«Ё∆я Џбм г”«Џѕ я. ед« гд Ё÷бя ќ–[ENTER]е–«.
+13054	« »Џъ «бдёЎ «бб«гЏ… Ён «бќ—нЎ… «бгх’џш—….
+13597	бг  ћѕ гЏ»ѕ «б√Ё«Џн »Џѕњ[ENTER]бд няжд гд «б”еб «бж’жб ≈бм е–« «бгя«д. б–«  √яѕ[ENTER]гд √дя ё«ѕ— »г« няЁн бгж«ће… гЏ»ѕ «б√Ё«Џн.
 12679	ё«Џ… ѕќжб »—ћ ћЌнг ”ждџ г«ен
 12680	еб  —нѕ «бѕќжб ≈бм »—ћ ћЌнг ”ждџ г«енњ
 12681	дЏг
@@ -12081,3 +12252,4 @@
 12673	≈е“г “Џнг «бЏ«бг!
 12674	ёг »«бЌ«ё «бЌѕ «б√ѕдм гд «б÷—— «бгЎбж» %d √ж √Џбм[ENTER]Џбм “нЏг «бЏ«бг.
 12675	 г «” яг«б «бгег… «бнжгн…: бёѕ ёг  »«бЌ«ё «бЌѕ[ENTER]«б√ѕдм гд «б÷—— «бгЎбж» Џбм “Џнг «бЏ«бг.
+12934	бёѕ ћ∆  ≈бм ед« бя”» «бгя«Ё√… Џбм е–« «бжЌ‘. Ён[ENTER]«б√’б я«д е–« «бгя«д гбн∆р« »жЌж‘ «б√Ё«Џн жя«д[ENTER]нхЎбё Џбне «”г гг— ннб«ѕ. бяд еб б«Ќў  √н ‘нЅ[ENTER]џ—н»њ «ќ Ё  яб жЌж‘ «б√Ё«Џн е–е.
