--- a/share/locale/ae/locale_string.txt
+++ b/share/locale/ae/locale_string.txt
@@ -77,7 +77,7 @@
 1068	 г Ќ–Ё Ќћ— «б днд »дћ«Ќ.
 1069	б« нхгядя ”Ќ» е–« «б»дѕ ѕ«ќб д«Ё–… «б’ёб.
 107	бёѕ ёг  » ”ћнб «д”Ќ«»я жнгядя «бќ—жћ гд гдЎё… «бгЏ—я… »Џѕ %d ѕё«∆ё.
-1070	бёѕ Ё‘б  Џбгн… «б Ќ”нд.
+1070	бёѕ Ё‘б  Џгбн…  Ќ”нд «б»дѕ.
 1071	б« нжћѕ √н Ќћ— гд √Ќћ«— «бг« нд Ён е–е «бќ—нЎ….
 1072	 г »дћ«Ќ «” ќ—«ћ гѕ… ’б«Ќн… Ќћ— «б днд «бгх »ёшн….
 1073	бёѕ Ё‘б  Џгбн… «” ќ—«ћ гѕ… ’б«Ќн… Ќћ— «б днд «бгх »ёшн….
@@ -261,7 +261,7 @@
 1233	»ѕ√  «Ќ Ё«бн… Okey!
 1234	«д е  «Ќ Ё«бн… Okey!
 1235	[«Ќ Ё«бн…-Okey] ≈–« дћЌ  Ён «бж’жб ≈бм ё«∆г… «бг ’ѕш—нд° ”няжд бѕня 7 √н«г ббЌ’жб Џбм ћ«∆“ я.
-1236	б« нгядя  дЁн– е–е «бЏбгн… √Ћд«Ѕ бЏ» Okey.
+1236	б« нгядя  дЁн– е–е «бЏгбн… √Ћд«Ѕ бЏ» Okey.
 1237	гёЁб. нћ» Џбня «б»ЌЋ Џд «бгЁ «Ќ.
 1238	н‘ џб Ќћ— «бЎёж” гЏ «б»джѕ «б н б« нёб г” ж«е« Џд «бг” жм 80.
 1239	б« нгядя «б ћ«—… б√дя ”  ћ«ж“ ёнг… %d жжд «бё’жм «бг”гжЌ »е«.
@@ -460,7 +460,7 @@
 1467	[гќ“д] б« нгядя  ќ“нд »дѕ г” ќѕг Ќ«бн«.
 1468	[е«б…] б« нЏгб Џбм »джѕ г—»жЎ… »«б—жЌ.
 1469	[е«б…] б« нЏгб гЏ гб«»” е«б…  г дёбе« «бм »дѕ ¬ќ— »«бЁЏб.
-147	б« нгядя  дЁн– е–е «бЏбгн…° Ў«бг« √д «б‘∆ ёѕ  г  ћен“е.
+147	б« нгядя  дЁн– е–е «бЏгбн…° Ў«бг« √д «б‘∆ ёѕ  г  ћен“е.
 1470	[е«б…] бёѕ ж’б  гб«»” «бе«б… «бм «бг” жм «б√ё’м.
 1471	[е«б…] б« нгядя  Ўжн— гб«»” «бе«б… ё»б √д  ёжг » Ќ”нде«.
 1472	[е«б…] нгяд ЁёЎ ≈ѕ—«ћ гб«»” «бе«б….
@@ -643,7 +643,7 @@
 1644	[“Џнг «бЏ«бг] «д »«е: ”нўе— “Џнг «бЏ«бг ё—н»«!
 1645	[ёж… «б√“е«—] бг нЏѕ гд «бггяд «” ќѕ«г е–« «б»дѕ.
 1646	б« нгядя «б Ќжб «б¬д.
-1647	«Ё б ћгнЏ «бжЌж‘ ќб«б «бгѕ… «бгЌѕѕ…!
+1647	«ё б ћгнЏ «бжЌж‘ ќб«б «бгѕ… «бгЌѕѕ…!
 1648	«б»ж«»… ≈бм «бџ—Ё… «б «бн… гЁ жЌ….
 1649	 ћд» ћгнЏ «бећг« !
 165	≈ќ Ём гя ‘Ё «б√Ќѕ«Ћ гЏ ÷жЅ џ«г÷.
@@ -655,14 +655,14 @@
 1655	” »ѕ√ «бгЏ—я… Ён ќб«б %d Ћ«дн….
 1656	 ж«ће «бг” жм %d.
 1657	«ё б “жћ« гд «бжЌж‘ б«  д гн бдЁ” «бЁ∆…!
-1658	бёѕ ёг  »ге«ћг… «бжЌ‘ «бќЎ√. «Ё б ћгнЏ «бжЌж‘!
-1659	«Ё б ћгнЏ «бжЌж‘ ќб«б «бгѕ… «бгЌѕѕ…!
+1658	бёѕ ёг  »ге«ћг… «бжЌ‘ «бќЎ√. «ё б ћгнЏ «бжЌж‘!
+1659	«ё б ћгнЏ «бжЌж‘ ќб«б «бгѕ… «бгЌѕѕ…!
 166	б« нгяд «” ќѕ«г  ёжн… «б‘нЅ Џбм е–« «б‘∆.
 1660	Ќћ— г« нд «б–н ѕг— е ќЎ√. ≈е“г ћгнЏ «бжЌж‘!
 1661	ѕг— Ќћ— «бг« нд «б’ЌнЌ!
 1662	√ЏЋ— Џбм «бгЁ «Ќ «б’ЌнЌ ббе—ж»!
 1663	√ЏЋ— Џбм «бќ г «бЌћ—н бя”— «бќ г!
-1664	[»—ћ ћЌнг ”ждџ г«ен] «Ё б ћгнЏ «бжЌж‘ ќб«б «бгѕ… «бгЌѕѕ…!
+1664	[»—ћ ћЌнг ”ждџ г«ен] «ё б ћгнЏ «бжЌж‘ ќб«б «бгѕ… «бгЌѕѕ…!
 1665	[»—ћ ћЌнг ”ждџ г«ен] «д е  ѕж—… «б — н» «бЌ«бн….
 1666	[»—ћ ћЌнг ”ждџ г«ен] бёѕ »ѕ√  ѕж—…  — н» ћѕнѕ….
 1667	гя«Ё√… гж”гн… ббг—я“ «б√жб Ён «бг” жм %d Ён »—ћ «бћЌнг.
@@ -692,6 +692,8 @@
 1693	 г  ѕгн— ћгнЏ «б»ƒ— «б«” нЎ«дн… Ён «бгдЎё… %s жбг  Џѕ «бгдЎё…  Ќ  ”нЎ—… ”ждџ г«ен.
 1694	√—«÷н ”нжџ«д
 1695	д«г ћж«дћ
+1696	 г  Џгбн… «б Ќ”нд »дћ«Ќ!
+1697	бб√”Ё Ё‘б «б Ќ”нд!
 1698	»Ё÷б дЏг… «бЌ’«д…° бёѕ  Ќ——  гд  √Ћн— ”ждџ г«ен.
 1699	бёѕ «д е  дЏг… «бЌ’«д… «бќ«’… »я жжЏѕ   Ќ   √Ћн— жбЏд… ”ждџ г«ен г—… √ќ—м.
 17	[—«»Ў…] б«  гбя «бЌёжё «бб«“г… б«” Џг«б ге«—«  «б—«»Ў….
@@ -718,8 +720,38 @@
 1718	[«бг ћ— «б‘ќ’н «бггн“] %s  г «б»нЏ. «б—ћ«Ѕ «” б«г √гж«бя.
 1719	[«бг ћ— «б‘ќ’н «бггн“] б« нгядя ≈Џ«ѕ… Ё Ќ «бг ћ— бгѕ… %d Ћ«дн… »Џѕ ≈џб«ёе.
 172	[џ«н«] бёѕ ж’б  ≈бм «бЌѕ «б√ё’м «бггяд гд «бџ«н«.
+1720	б« нгядя «бён«г »–бя √Ћд«Ѕ ≈д‘«Ѕ «б»—ћ «бгЌ’д.
+1721	б« нгядя ≈Ќн«Ѕ дЁ”я »Џѕ «б¬д. ”н г дёбя ќ«—ћ «б»—ћ «бгЌ’д.
+1722	бёѕ ”»ё √д Ќ’б  Џбм гя«Ё∆ я. ≈–« яд   —нѕ «бгЌ«жб… г—… √ќ—м° Џѕ б«Ќёр«. «бжё  «бг »ён: %d ” %d ѕ
+1723	нгядя ≈Ќн«Ѕ дЁ”я %d г—«  ≈÷«Ён….
+1724	нгядя «б¬д ѕќжб гЏ»ѕ «б√Ё«Џн. «” ќѕг  гЋ«б «б√ЁЏм бе–« «бџ—÷.
+1725	«бг« нд «бгѕг— б« н Ё«Џб. Џ«ѕ  ћгнЏ «бг« нд«  ≈бм «б”ЎЌ г—… √ќ—м.
+1726	«бг« нд «бгѕг— б« н Ё«Џб. Џ«ѕ  ћгнЏ «бг« нд«  ≈бм «б”ЎЌ г—… √ќ—м.
+1727	бёѕ ѕг—  %d г« нд. г »ён бб ѕгн— %d г« нд.
+1728	бёѕ «д ем «бжё . ”н г дёбя ќ«—ћ «б»—ћ «бгЌ’д.
+1729	е–« г «Ќ «б¬д б %d ѕёнё….
 173	[џ«н«]  г  Џгбн… «б Ќжнб »дћ«Ќ.
+1730	б« нгядя  гѕнѕ жё  «б»—ћ «бгЌ’д √яЋ— гд –бя.
+1731	 г  гѕнѕ жё  «б»—ћ «бгЌ’д бгѕ… ѕёнё… ж«Ќѕ….
+1732	бёѕ ё б  яб «бжЌж‘. ”н г дёбя ≈бм «бг” жм %d. б« н“«б ед«я %d Ћ«дн… «бм –бя «бЌнд.
+1733	бёѕ ѕг—  яб «бг« нд« . ”н г дёбя ≈бм «бг” жм %d. б« н“«б ед«я %d Ћ«дн… «бм –бя «бЌнд.
+1734	я«д  «бёЎЏ… г ’б… »—√” «б√ЁЏм. жбяд бг нЌѕЋ ‘мЅ.
+1735	 г Ё Ќ ћгнЏ √Џгѕ… «б√Ё«Џн. «бг” жм %d Ён %d Ћ«дн….
+1736	ўе— Ќѕ«ѕ гЏ»ѕ «б√Ё«Џн «бќ«’!
+1737	ўе— Ќѕ«ѕ гЏ»ѕ «б√Ё«Џн!
+1738	бёѕ ё б  яб «бжЌж‘ жнгядя «б¬д «б«д ё«б ≈бм г” жм «б“Џг«Ѕ.
+1739	бёѕ √ягб  гЏ»ѕ «б√Ё«Џн »дћ«Ќ. ”н г дёбя ќ«—ћ «б»—ћ «бгЌ’д ќб«б %d Ћж«дн.
 174	[џ«н«] бёѕ Ё‘б  Џгбн… «б Ќжнб.
+1740	ЌЎг √Ќћ«— «бг« нд »«б — н» «б’ЌнЌ.
+1741	«ё б ћгнЏ «бжЌж‘.
+1742	ќ– «бгЁ «Ќ гд «бжЌж‘ ж«Ё Ќ «б“д“«д….
+1743	бёѕ √÷Ё  ёЎЏ… ≈бм —√” «б√ЁЏм.
+1744	«ё б «б“Џнг.
+1745	 г «бЁ Ќ »дћ«Ќ!
+1746	Џбня Ё Ќ «бЏгжѕ «б¬ќ— √жб«р.
+1747	 г Ё Ќ «б”ћд. н» ”г бя «бЌѕ«ѕ.
+1748	е–« «бгЁ «Ќ б« нгяде √д нЁ Ќ «б”ћд жнЎбё ”—«Ќ «бЌѕ«ѕ.
+1749	е–е «бёЎЏ… б«  д«”» —√” «б√ЁЏм.
 175	[џ«н«] бёѕ  г  ЌѕнЋ ё«∆г… «б»джѕ.
 1752	нћ» Џбня гбЅ я—… ќ»—… ж«Ќѕ… Џбм «б√ёб Џдѕ «бг” жм 120 б  гяд гд «бж’жб ≈бм г” жм «б»Ўб.
 1753	Џбня ≈де«Ѕ «б»—ћ «бгЌ’д "«бѕЁ«Џ Џд «б”Ёнд…"
@@ -730,15 +762,21 @@
 1758	[«бг ћ— «б‘ќ’н «бггн“] б« нгядя «бён«г »–бя √Ћд«Ѕ ≈ѕ«—… «б»джѕ.
 176	бёѕ «ќ Ём гхя ‘Ё «б√Ќѕ«Ћ »‘яб я«гб.
 1760	[Џб«ж… «б√Ћ— «бёѕнг] б« нгяд е–« «б√г— √Ћд«Ѕ Ё Ќ д«Ё–… Џб«ж… «б√Ћ— «бёѕнг.
+1761	%s бёѕ  —я √Џ÷«Ѕ «бгћгжЏ… «бё «б.
+1762	бѕня %d ѕёнё… г »ён….
 1763	[«бг ћ— «б‘ќ’н «бггн“] б« нгядя «бг»«—“… ед«.
 1764	[«бг ћ— «б‘ќ’н «бггн“] б« н г  ЌѕнЋ «б√гж«б «бё«»б… бб Ќ’нб √Ћд«Ѕ ≈ѕ«—… «б»джѕ.
+1765	ўе— «б“Џнг «б√ќн— бгЏ»ѕ «б√Ё«Џн!
 1766	[г ћ— ‘ќ’н ггн“] бёѕ  г Ё Ќ г ћ— ед« »«бЁЏб. н—ћм «б»ЌЋ Џд гя«д ¬ќ— ЌнЋ нгядя Ё Ќ г ћ—я.
+1767	б« нгядя  Ќ”нд е–« √Ћд«Ѕ «” ѕЏ«Ѕ —Ёнё ё«»б бб Ўжн—.
 177	[џ«н«] бн” бѕня г« няЁн гд «бџ«н«.
 178	[џ«н«] б« нгядя ‘—«Ѕ е–« «б»дѕ.
 179	[џ«н«] ё«∆г… «бћ—ѕ «бќ«’… »я гг б∆….
 18	[—«»Ў…] ≈дя «б¬д г‘«еѕ б√дя «” дЁ–  Џѕѕ г—«  ≈Џ«ѕ… «б≈Ќн«Ѕ «бг”гжЌ »е«.
 180	[џ«н«] ≈дя б«  г бя "≈Џ«ѕ…  Џннд г ћ— «бџ«н«".
+1802	е–« ”н «Ќ »гћ—ѕ »ѕЅ «бё «б.
 181	[џ«н«] нћ» Џбня Ё Ќ г ћ— «бџ«н« √жб«.
+1812	б« нгядя «бён«г »–бя √Ћд«Ѕ «бг «ћ—….
 182	[џ«н«] б« нгядя Ё Ќ √н г”«Ќ… ≈÷«Ён… Ён г ћ— «бџ«н«.
 183	[џ«н«] бн” бѕня г« няЁн гд %s. √д  »Ќ«ћ… ≈бм %d “н«ѕ… бЁ Ќ г”«Ќ… ≈÷«Ён….
 184	[џ«н«] г ћ— «бџ«н« џн— гх «Ќ Ќ«бн«.
