--- a/share/locale/gr/locale_quest.txt
+++ b/share/locale/gr/locale_quest.txt
@@ -1,3 +1,6 @@
+13305	Έι! Έχεις το κλειδί για να με ελευθερώσεις;
+13306	Ελευθέρωσέ με, σε παρακαλώ. Δεν μπορεί να με βοηθήσει κάποιος;
+13307	Έι, εσύ! Βρε το κλειδί, σε παρακαλώ!
 2	Σου είπα τα πάντα για τις δυνάμεις που[ENTER]χρειαζόμαστε για να αντιμετωπίσουμε τον Sung[ENTER]Mahi.[ENTER][ENTER]Βιάσου, πήγαινε πίσω στον λοχαγό.[ENTER][ENTER]Όταν αποκτήσεις τα απαιτούμενα υφάσματα, έλα πάλι[ENTER]εδώ.
 1	Ένα ιδιαίτερο ύφασμα
 3	Ενίσχυση της δύναμής σου
@@ -829,6 +832,26 @@
 12585	Βρήκα όλες τις Σκοτεινές Φτέρες.[ENTER]Γύρνα γρήγορα στον Chaegirab.
 12591	Μη με κάνεις να βιάζομαι! Ακόμη κι αυτή η[ENTER]μαραμένη φτέρη είναι χρήσιμη για την επιστήμη.[ENTER]Έλα πάλι αργότερα και φέρε μου ένα νέο φυτό.[ENTER]Χρόνος ηρεμίας που απομένει: %s
 12713	Ω, λυπάμαι.[ENTER]Δεν έχω αναλύσει ακόμα την προηγούμενη Φτέρη.[ENTER]Έλα πάλι αργότερα.[ENTER]Χρόνος ηρεμίας που απομένει: %s
+13038	Ναι
+13039	Όχι
+13041	Αυτό είναι διαθέσιμο μόνο για τον Αρχηγό.
+13042	Εκκίνηση μάχης
+13043	Παραίτηση
+13044	Έξοδος
+13045	Θέλεις να ξεκινήσεις το Μπουντρούμι «Ναός Φιδιών»;
+13046	Ναός Φιδιών
+13047	Θέλεις να φύγεις από αυτό το μέρος; Μπορείς να[ENTER]επιστρέψεις μέχρι να ξεκινήσει η μάχη.
+13048	Το μπουντρούμι που δημιουργήθηκε θα εξαφανιστεί.[ENTER]Θέλεις να τα παρατήσεις;
+13056	Όλα τα μέλη της ομάδας πρέπει να βρίσκονται στο[ENTER]ίδιο μέρος.
+13061	Πήγαινε στο επίπεδο αρχηγού.
+13062	Σιδεράς Ναού Φιδιών
+13063	Θέλεις να πας στο επίπεδο αρχηγού;
+13064	Σιδεράς για αναβάθμιση γαντιών.
+13065	Έι, μπορώ να βελτιώσω τα γάντια σου. Δεν[ENTER]χρειάζεσαι άλλα υλικά! Απλά δώσε μου τα γάντια[ENTER]που θέλεις να βελτιώσω. Η βελτίωσή μου έχει την[ENTER]ίδια επίδραση με έναν Πάπυρο Ευλογίας.
+13613	Θέλεις να φύγεις από το Μπουντρούμι;
+13614	Δεν μπορείς να μηδενίσεις τις εισόδους σου αυτήν[ENTER]τη στιγμή.
+13615	Θέλεις να μηδενίσεις τις εισόδους σου στον Ναό[ENTER]Φιδιών;
+13616	Οι είσοδοί σου στον Ναό Φιδιών επέστρεψαν στις 5.
 679	Νίκησε την Jin-Hee
 678	Εκδίκηση του εμπόρου δαχτυλιδιού
 680	Η Γριά Κυρία σε παρακάλεσε να την βοηθήσεις. Ο[ENTER]φίλος της, ο έμπορος δαχτυλιδιών, δολοφονήθηκε[ENTER]από τους Jin-Hee, την αφρόκρεμα του Λευκού Όρκου.[ENTER]Πάρε εκδίκηση σκοτώνοντας 30 Jin-Hee.
@@ -1358,6 +1381,30 @@
 989	Ορίστε ο Κρύσταλλος ενέργειας. Μόνο η πρώτη[ENTER]προσπάθεια είναι πάντοτε επιτυχής. Η Αλχημεία[ENTER]είναι μια απρόβλεπτη επιστήμη και η παραμικρή[ENTER]απόκλιση οδηγεί στην αποτυχία! Υπάρχει πάντα ένας[ENTER]μικρός κίνδυνος να αποτύχει το πείραμα.
 990	Δυστυχώς η προσπάθεια απέτυχε και δεν κατάφερα να[ENTER]φτιάξω έναν Κρύσταλλο ενέργειας. Η τεχνική μου[ENTER]είναι ιδιοφυής, αλλά η η εκτέλεση είναι γεμάτη[ENTER]κινδύνους. Δεν λειτουργούν πάντοτε όλα σύμφωνα με[ENTER]το σχέδιο.[ENTER]Την επόμενη φορά σίγουρα θα πετύχουμε!
 991	Το ήξερα! Η τεχνική μου είναι ιδιοφυής! Ορίστε ο[ENTER]Κρύσταλλος ενέργειάς σου. Είναι τέλειος! Νιώθεις[ENTER]τη δύναμη;
+13540	Θέλεις να μπεις στο Ναό Φιδιών;
+13014	Είσοδος στον Ναό Φιδιών
+13020	Σημαντικές προετοιμασίες
+13021	Πρέπει να βρω ένα ’γαλμα-Φίδι, για να μπω στο Ναό[ENTER]Φιδιών.
+13022	Θα χρειαστείς διάφορα πράγματα για να προχωρήσεις[ENTER]σε αυτό το υπόγειο μπουντρούμι... ένα καπέλο, ένα[ENTER]μαστίγιο ή ένα σακουλάκι άμμου σε μέγεθος[ENTER]θησαυρού θα ήταν σίγουρα πρακτικά αντικείμενα.[ENTER]Μπορώ να φτιάξω αυτά τα πράγματα για σένα.
+13023	Αν θέλεις όμως να μπεις στο Ναό, πρέπει να μου[ENTER]φέρεις %d Λέπια Φιδιών για τον εξοπλισμό. Κι[ENTER]επειδή θα επιτύχει μόνο ο μετανοημένος ήρωας, θα[ENTER]σου κοστίσει %d Yang. Μπορείς να μου φέρεις και[ENTER]τα δυο;
+13024	Απαιτούνται %d Λέπια Φιδιών για το ’γαλμα-Φίδι.[ENTER]Θα τα βρεις από τέρατα της περιοχής.
+13025	Για να μπω στο Ναό Φιδιών πρέπει να βρω %d Λέπια[ENTER]Φιδιών που χρειάζεται το ’γαλμα-Φίδι.[ENTER]Υπόλοιπα τεμάχια: %d
+13026	Χρειάζομαι κι άλλα Λέπια Φιδιών...
+13027	Απέκτησες Λέπια Φιδιών. Μαζεμένα αντικείμενα: %d
+13028	Αυτά είναι όλα τα Λέπια Φιδιών που χρειάζεται το[ENTER]’γαλμα-Φίδι. Πήγαινε στο άγαλμα.
+13029	Βρήκα και τα %d Λέπια Φιδιών! Πρέπει να επιστρέψω[ENTER]στο ’γαλμα-Φίδι.
+13030	Έχεις όλα τα Λέπια Φιδιών; Θα χρειαστώ λοιπόν %d[ENTER]Yang και θα σου δώσω πρόσβαση στο Ναό.
+13031	Δώσε και τα δύο
+13032	Ακύρωση
+13033	Δεν έχεις αρκετά χρήματα...
+13034	Ωραία. Έγιναν όλα! Ορίστε τα πράγματά σου, καλή[ENTER]τύχη. Αν χρειαστείς κι άλλο εξοπλισμό για μια νέα[ENTER]εξόρμηση, έλα πάλι σε μένα.
+13035	Δημιουργία
+13036	Είσοδος
+13037	Θέλεις να μπεις στο Ναό Φιδιών; Απομένουν άλλες[ENTER]%d είσοδοι.
+13040	Θέλεις να δημιουργηθεί ένα μπουντρούμι Ναού[ENTER]Φιδιών;
+13049	Δεν μπορείς να μπεις ξανά σήμερα.
+13055	Δεν μπορείς να δημιουργήσεις νέο μπουντρούμι όσο[ENTER]δεν έχει συλλέξει ακόμη όλες τις ανταμοιβές.
+13182	Υπόλοιπα Λέπια Φιδιών
 992	Φύλακας περιοχής event
 993	Θέλεις να εγκαταλείψεις την περιοχή event;
 994	Θέλεις να μπεις στην περιοχή event;
@@ -1626,6 +1673,17 @@
 10167	Μείωσε τη σκοτεινή ενέργεια στο Ζωδιακό Ναό με τη[ENTER]βοήθεια των Ανιμασφαιρών, πριν δυναμώσει πολύ.[ENTER]Καταναλώνεις αυτόματα Ανιμασφαίρες μόλις μπεις[ENTER]στο Ναό. Προσοχή: Η αποστολή δεν μπορεί να[ENTER]ολοκληρωθεί αν έχεις ενεργοποιήσει το Σύμβολο των[ENTER]Φυλάκων.
 10168	Τα κατάφερες! Πήγαινε στο Μοναχό Μίλμπον, για να[ENTER]πάρεις το δώρο σου.
 10169	Ευχαριστώ, ο Ναός είναι ασφαλής για τώρα. Ορίστε[ENTER]το δώρο σου. Η ενέργεια θα αυξηθεί και πάλι.[ENTER]Επίστρεψε μετά από 24 ώρες για να τη μειώσεις και[ENTER]πάλι μέσω Ανιμασφαιρών. Φυσικά θα λάβεις πάλι μια[ENTER]ανταμοιβή.
+13586	Μπες στο μυστηριώδες μπουντρούμι
+13587	Μυστηριώδης Βωμός
+13588	Έι! Ξέρω, έχω μεταμορφωθεί σε βράχο. Φταίει η[ENTER]Κατάρα του Sung Mahi. Είμαι όμως Σαμάνος και[ENTER]μπορώ να σου μιλήσω για ένα πολύ ενδιαφέρον[ENTER]μέρος...[ENTER]Αν έχεις ένα Μυστηριώδες Εισιτήριο, μπορώ να σε[ENTER]πάω στο Μυστηριώδες Μπουντρούμι.[ENTER]Θέλεις να το δοκιμάσεις;
+13589	Ναι
+13590	Όχι
+13591	Ω! Δεν μπορώ να σε αφήσω να μπεις χωρίς[ENTER]Μυστηριώδες Εισιτήριο.
+13598	Δεν μπορείς να μπεις αυτήν τη στιγμή.
+13609	Έξοδος
+13610	Θέλεις να φύγεις από το Μπουντρούμι;
+13611	Ναι
+13612	Όχι
 1209	Απόρριψη
 1208	Γιατί κλαις;
 1210	Φυσικά θα σε βοηθήσω. Δεν είναι δύσκολη αποστολή[ENTER]και καταλαβαίνω ότι θέλεις να αποκτήσεις ξανά το[ENTER]ενθύμιο. Τα λέμε σύντομα!
@@ -7628,6 +7686,15 @@
 12707	Απέκτησες %d Ελιξήρια Ήλιου (S).
 12708	Πήγαινε στον Έμπορο Πανοπλιών για τη γιορτή.
 12709	Απέκτησες %d Τελετουργικούς λίθους.
+12971	Μια Κρυφή Κοιλάδα
+12972	Υπάρχουν φήμες ότι βρέθηκε μια νέα κοιλάδα.[ENTER]Πήγαινε στον Κομφούκιο.
+12973	Δεν έχουμε βρεθεί εδώ και πολύ καιρό. Πού ήσουν[ENTER]αυτές τις μέρες; Το κρυφό μέρος που σου προκάλεσε[ENTER]σκοτούρες βρέθηκε.
+12974	’κουσα πως ο δρόμος προς τα εκεί είναι δύσκολος.[ENTER]Θέλω να σε παρακαλέσω να πας εκεί και να μάθεις[ENTER]περισσότερα γι' αυτήν την κρυφή κοιλάδα. Μόλις[ENTER]φτάσεις, θα συναντήσεις έναν φρουρό που έστειλα[ENTER]εκεί πριν από λίγο καιρό.
+12975	Ξεκλειδώθηκε μια νέα περιοχή. Πήγαινε στον Φύλακα[ENTER]Φιδιών.
+12976	Έι, γιατί είσαι ακόμη εδώ; Αν πας στην Πεδιάδα[ENTER]Dongan, μπορείς να πας από εκεί στη νέα περιοχή.
+12977	Πήγαινε στη νέα περιοχή για να συναντήσεις τον[ENTER]Φύλακα Φιδιών.
+12978	Ποιος είσαι εσύ; Χα, σε έστειλε ο Κομφούκιος; Δεν[ENTER]μπορεί... Γιατί έστειλε έναν αρχάριο σαν εσένα σε[ENTER]μια τόσο δύσκολη περιοχή;
+12979	Ο Κομφούκιος μου είπε να σου δώσω αυτό όταν[ENTER]έρθεις. Έλα πάλι αργότερα, υπάρχουν κι άλλες[ENTER]αποστολές.
 6353	Μία νέα ζωή...
 6354	Ξυπνάς και νιώθεις χνουδωτός. Τι συνέβη; Τι[ENTER]είσαι;! Βρες τον Myonghorang τον Σοφό. Θα σου[ENTER]εξηγήσει.
 6355	Καλωσόρισες, Λυκανέ!
@@ -7965,11 +8032,11 @@
 6606	Συνολικοί πόντοι
 6607	Περισσότεροι πόντοι γύρου
 6608	Οι 10 παίκτες με τους περισσότερους συνολικούς[ENTER]πόντους θα αποκτήσουν επιπλέον κέρδη.
-6610	1η θέση: %s φορές %d
+6610	1η θέση: %s %d φορές
 6609	Κλείσιμο
-6611	2η θέση: %s φορές %d
-6612	3η θέση: %s φορές %d
-6613	4η - 10η θέση: %s φορές %d
+6611	2η θέση: %s %d φορές
+6612	3η θέση: %s %d φορές
+6613	4η - 10η θέση: %s %d φορές
 6614	Πρώτη θέση: %s, %d
 6615	Δεύτερη θέση: %s, %d
 6616	Τρίτη θέση: %s, %d
@@ -9808,6 +9875,12 @@
 12080	Ακύρωση
 12081	Οι αξίες σου μηδενίστηκαν.
 12082	Δεν έχεις αξίες που μπορούν να μηδενιστούν.
+13057	Ολοκλήρωσες με επιτυχία τον Ναό Φιδιών και μπορείς να παραλάβεις την ανταμοιβή σου. Μίλα με το ’γαλμα-Φίδι.
+13058	Απέκτησες ανταμοιβές
+13059	’γαλμα-Φίδι
+13060	Νίκησες όλα τα κακά Φίδια. Αξίζεις αυτό το[ENTER]σεντούκι.
+13606	Απέκτησες %d x Φιδοθησαυρό.
+13607	Απέκτησες %d x Φιδόσκονη.
 8044	Έχεις πολύ χαμηλό επίπεδο!
 8045	Δεν μπορείς να ιππεύσεις όσο είσαι μεταμορφωμένος!
 8046	Ήδη ιππεύεις! Αν θέλεις να αλλάξεις ζώο ιππασίας,[ENTER]πρέπει πρώτα να κατέβεις από το ζώο.
@@ -9951,6 +10024,48 @@
 11499	Όχι, θα μείνω εδώ.
 11500	Ο Μπλε Δράκος (ΡΧ) επέστρεψε!
 11679	Όλοι οι πολεμιστές θα τηλεμεταφερθούν έξω από τη[ENTER]Σπηλιά της Εξορίας (ΡΧ) σε τρία λεπτά.
+12980	Τι είναι ο Ναός Φιδιών;
+12981	Για να βρω τον κρυφό ναό, πρέπει να μιλήσω με τον[ENTER]Φύλακα Φιδιών.
+12982	Έι, αρχάριε. Δεν ξέρω ακόμα τι ικανότητες έχεις.[ENTER]Αν ακολουθήσεις το μονοπάτι της κοιλάδας πίσω[ENTER]μου, θα φτάσεις σε έναν τεράστιο ναό. Έχεις[ENTER]ακουστά τον Ναό Φιδιών;
+12983	Θα συναντήσεις πάρα πολλά επικίνδυνα τέρατα.[ENTER]Σίγουρα θα το σκάσεις αμέσως. Αν όμως έχεις το[ENTER]απαραίτητο θάρρος, θα βρεις εκεί θησαυρούς.
+12984	Πώς θα μπω;
+12985	Χαχαχα! Δεν θα μπεις, εκτός αν σε αφήσω εγώ. Θα[ENTER]δοκιμάσω το θάρρος σου.
+12986	Τα μάτια σου λάμπουν από προθυμία! Σίγουρα θα[ENTER]μπορέσεις λοιπόν να νικήσεις μερικά τέρατα για[ENTER]μένα εδώ στην περιοχή! Σιγά-σιγά γίνεται[ENTER]κουραστικό το να κρατάω σε τάξη αυτήν την[ENTER]περιοχή.
+12987	Κυνήγησε τέρατα στην περιοχή, για να περάσεις την[ENTER]εξέταση του Φύλακα Φιδιών.
+12988	Ο Φύλακας Φιδιών θέλει να κυνηγήσεις %d τέρατα[ENTER]στη Διάβαση Γιλάντ.[ENTER]Υπόλοιπα τέρατα: %d
+12989	Έι, δεν έχεις ασχοληθεί ακόμη με αυτά τα[ENTER]τέρατα... Μήπως τα παρατάς;
+12990	Σκότωσα όλα τα τέρατα για τον Φύλακα Φιδιών.[ENTER]Πρέπει να επιστρέψω σε αυτόν.
+12991	Σκότωσα όλα τα τέρατα για τον Φύλακα Φιδιών.[ENTER]Πρέπει να επιστρέψω σε αυτόν.
+12992	Ω! Έχεις περισσότερο θάρρος απ' όσο νόμιζα. Σε[ENTER]παρακολουθούσα από μακριά όταν πολεμούσες και[ENTER]θυμήθηκα τα νιάτα μου.
+12993	Τέλος πάντων. Αυτή είναι η ανταμοιβή για την[ENTER]επιτυχή εξέταση.
+13180	Υπόλοιπα τέρατα
+13603	Σκότωσες %d τέρατα. Υπόλοιπα τεμάχια: %d
+12994	Ναός Φιδιών;!
+12995	Ανακαλύφθηκε μια νέα περιοχή. Πρέπει να πάω στον[ENTER]Φύλακα Φιδιών που φυλάει αυτό το μέρος.
+12996	Έι, αρχάριε. Μάλλον θέλεις να μπεις σε εκείνη την[ENTER]κοιλάδα...
+12997	Αν θέλεις να μπεις στην κοιλάδα, θέλω να μου[ENTER]κάνεις πρώτα μια χάρη! Τα τέρατα της περιοχής[ENTER]προκαλούν πολλά προβλήματα αυτόν τον καιρό. Θα[ENTER]χρειαστώ τη βοήθειά σου.
+12998	Θέλω να νικήσεις αυτά τα τέρατα και να μου βρεις[ENTER]Ρινίσματα σιδήρου. Μπορείς να το κάνεις αυτό; Απ'[ENTER]όσο ξέρω, μπορείς να βγάλεις και καλά χρήματα με[ENTER]Ρινίσματα σιδήρου.
+12999	Ναι.
+13000	Όχι.
+13001	Τότε φοβάμαι πως δεν μπορείς να μπεις στην[ENTER]κοιλάδα!
+13002	Βρες τα %d Ρινίσματα σιδήρου που θέλει να[ENTER]αποκτήσει ο Φύλακας Φιδιών. Θα τα βρεις από[ENTER]τέρατα της περιοχής.
+13003	Τι, τα μάζεψες τόσο γρήγορα; Έι! Νομίζω πως[ENTER]μέτρησες λάθος. Είπα %d!
+13004	Ο Φύλακας Φιδιών απαιτεί %d Ρινίσματα σιδήρου για[ENTER]να σε αφήσει να μπεις στην κοιλάδα. Πρέπει να[ENTER]σκοτώσω τέρατα κοντά στη Διάβαση Γιλάντ για να[ENTER]αποκτήσω Ρινίσματα σιδήρου.[ENTER]Υπόλοιπα Ρινίσματα σιδήρου: %d
+13005	Απέκτησες Ρινίσματα σιδήρου. Μαζεμένη ποσότητα: %d
+13006	Βρήκα όλα τα Ρινίσματα σιδήρου που ήθελε ο[ENTER]Φύλακας Φιδιών. Πρέπει να επιστρέψω σε αυτόν.
+13007	Βρήκα όλα τα Ρινίσματα σιδήρου που ήθελε ο[ENTER]Φύλακας Φιδιών. Πρέπει να επιστρέψω σε αυτόν.
+13008	Ω, ήξερα πως είσαι κατάλληλος γι' αυτήν την[ENTER]αποστολή. Αυτή είναι η σωστή ποσότητα!
+13009	Τότε θα σε βοηθήσω να περάσεις την κοιλάδα. Μόλις[ENTER]φτάσεις στην άλλη πλευρά, θα δεις έναν τεράστιο[ENTER]ναό. Αν θέλεις να μπεις εκεί μέσα αργότερα, έλα[ENTER]πάλι σε μένα.
+13010	Μπορείς να αποκτήσεις πρόσβαση στον Ναό Φιδιών[ENTER]από τον Φύλακα Φιδιών.
+13011	Α, εδώ είσαι πάλι! Θέλεις να εισέλθεις;
+13012	Τότε φέρε μου τα Ρινίσματα σιδήρου που μάζεψες[ENTER]για μένα την προηγούμενη φορά και θα σου δώσω ένα[ENTER]εισιτήριο. Αυτήν τη φορά χρειαζόμαστε %d[ENTER]Ρινίσματα σιδήρου.
+13013	Ναός Φιδιών;! (Επανάληψη)
+13015	Θέλεις να μπεις στο Ναό Φιδιών;
+13016	Επιβεβαίωση
+13017	Ακύρωση
+13018	Μίλα με τον Φύλακα Φιδιών, για να μπεις στο Ναό[ENTER]Φιδιών.
+13019	Αυτή η κοιλάδα είναι πολύ επικίνδυνη. Γι' αυτό να[ENTER]προσέχεις.
+13181	Υπόλοιπα Ρινίσματα σιδήρου
 8167	Φυλάκιο του Nemere
 8168	Μπείτε τώρα στο Φυλάκιο του Nemere. Ο μέγιστος[ENTER]χρόνος παραμονής είναι μια ώρα. Μετά την[ENTER]ολοκλήρωση ή τη διακοπή της περιπέτειας, πρέπει[ENTER]να περιμένετε 4 ώρες, μέχρι να μπορέσετε να[ENTER]μπείτε και πάλι.
 8169	Νίκησε όλους τους εχθρούς!
@@ -11793,6 +11908,62 @@
 12884	Κατέστρεψες όλα τα Metin Jin. Πες στον Κομφούκιο[ENTER]στην Πεδιάδα Dongan για την κατάσταση.
 12885	Πήγαινε πίσω στον Κομφούκιο και δώσε αναφορά για[ENTER]το τι συμβαίνει.
 12886	Η επιρροή του μειώθηκε, αλλά αυτό δεν αρκεί[ENTER]ακόμη. Μετράει όμως κάθε τι μικρό. Έχω ένα μικρό[ENTER]δωράκι για σένα, για να σου αποδείξω την[ENTER]ευγνωμοσύνη μου.
+12914	Μια ’γνωστη Περιοχή
+12915	Όταν περιπλανιόμουν για να μάθω περισσότερα γι'[ENTER]αυτήν την περίεργη φήμη, βρέθηκα σε μια άγνωστη[ENTER]περιοχή. Καλύτερα να εξερευνήσουμε την περιοχή[ENTER]για να μάθουμε αν αυτό το μέρος είναι η πηγή της[ENTER]φήμης.
+12916	Βλέπω κάποιον μακριά. Καλύτερα να πλησιάσουμε[ENTER]προσεκτικά.
+12917	Στη γωνιά κάθεται ένα νευρικό άτομο. Καλύτερα να[ENTER]του μιλήσουμε.
+13541	Προστέθηκε μια νέα αποστολή.
+12918	Ένα Περίεργο ’τομο
+12919	Πήγαινε να μιλήσεις στο περίεργο άτομο.
+12920	Θεέ μου!
+12921	Ποιος είσαι εσύ;! Πώς κατάφερες να φτάσεις ως εδώ;
+12922	Έι! Ποιος είσαι εσύ; Εγώ είμαι Κυνηγός[ENTER]επικηρυγμένων κι έκανα το μακρύ δρόμο για να μάθω[ENTER]για τη φήμη σχετικά με αυτό το χωριό. Κι εσύ το[ENTER]ίδιο; Τώρα πρέπει να εξετάσω κάτι εδώ. Αν με[ENTER]βοηθήσεις, θα σου πω τι έμαθα ως τώρα.
+12923	Απόρριψη
+12924	Θα σε βοηθήσω.
+12925	Τι δειλός...
+12926	Νομίζω πως εδώ συμβαίνει κάτι μεγάλο. Ας ρίξουμε[ENTER]μια ματιά κι ας σκοτώσουμε διεφθαρμένους[ENTER]Στρατιώτες. Επειδή είναι τόσο επικίνδυνα εκεί, θα[ENTER]συναντηθούμε πάλι εδώ.
+12927	Σκότωσε διεφθαρμένους Στρατιώτες.[ENTER]Υπόλοιποι αντίπαλοι: %d
+12928	Μην χασομεράς! Δεν θα σου πω τίποτα αν στέκεσαι[ENTER]απλά εδώ.
+12929	Σκότωσα όλους τους διεφθαρμένους Στρατιώτες και[ENTER]πρέπει να επιστρέψω στον Κυνηγό επικηρυγμένων.
+12930	Μπράβο. Ορίστε η ανταμοιβή σου. Θα μάθω τι πρέπει[ENTER]να κάνουμε τώρα. Έλα πάλι αργότερα.
+12931	Μια Περίεργη Φήμη
+12932	Καλύτερα να ρωτήσω τον Κυνηγό επικηρυγμένων για[ENTER]τη φήμη σχετικά με τη Διάβαση Γιλάντ.
+12933	Τώρα τα πράγματα είναι πιο ξεκάθαρα. Η φήμη;! Εσύ[ENTER]πώς έμαθες γι' αυτήν; Εδώ κοντά υπάρχει ένας[ENTER]κρυφός βωμός, όπου κυκλοφορεί ένα ισχυρό τέρας.[ENTER]Μάλλον ξέρεις ήδη αυτήν τη φήμη. Εντάξει, θα σου[ENTER]πω κάτι ακόμη.
+12935	Εξαφανίστηκαν όλα;
+12936	Όχι ακριβώς, έχτισαν το Ναό Φιδιών κι εκεί έγιναν[ENTER]πιο δυνατά. Στόχος μου είναι να σκοτώσω την[ENTER]αρχηγό τους και να πάρω την ανταμοιβή. Είναι όμως[ENTER]δύσκολο να πλησιάσω, επειδή υπάρχει ένας φύλακας[ENTER]κοντά στο βωμό. Αν θέλεις όμως, μπορείς να με[ENTER]βοηθήσεις να κυνηγήσω αυτά τα τέρατα. Είναι όμως[ENTER]πολύ δύσκολο να μπούμε ανάμεσά τους.
+12937	Όχι τώρα.
+12938	Ήξερα πως δεν θα με άφηνες έτσι. Ένα χέρι[ENTER]βοηθείας είναι πάντα ευπρόσδεκτο. Ας πάμε λοιπόν[ENTER]στο βωμό.
+12939	Πρέπει να σκοτώσω διεφθαρμένους Πολεμιστές για να[ENTER]ανοίξω το δρόμο.[ENTER]Υπόλοιπα τέρατα: %d
+12940	Τι λες λοιπόν; Υπάρχει κάποια πρόοδος; Δεν[ENTER]νομίζω... Βιάσου, δεν μας μένει πολύς χρόνος!
+12941	Κυνήγησα όλους τους διεφθαρμένους Πολεμιστές κι[ENTER]άνοιξα το δρόμο. Πρέπει να επιστρέψω στον φύλακα[ENTER]της Κυνηγός επικηρυγμένων.
+12942	Σκοτώθηκαν όλοι οι διεφθαρμένοι Πολεμιστές.[ENTER]Πήγαινε πίσω στον Κυνηγό επικηρυγμένων.
+12943	Μπράβο. Τώρα βλέπω το μονοπάτι μας. Ας[ENTER]συνεχίσουμε γρήγορα στην επόμενη περιοχή.[ENTER]Φαίνεται πως πλησιάζουμε στο κατάλυμά μας.
+12966	Μου επιτρέπεις;
+12967	Εντάξει, τότε γύρνα πίσω. Μπορείς όμως να έρθεις[ENTER]ξανά όποτε θέλεις αν αλλάξεις γνώμη.
+12944	Ένας Κρυφός Βωμός
+12945	Νομίζω πως βλέπω ήδη τον κρυφό βωμό. Πήγαινε[ENTER]γρήγορα πίσω στον Κυνηγό επικηρυγμένων.
+12946	Ναι, ακριβώς. Αφού πέρασα από όλα αυτά τα τέρατα,[ENTER]έφτασα στο βωμό. Όμως ο Φύλακας δεν με άφησε να[ENTER]μπω. Τον παρακάλεσα πολλές φορές, αλλά αυτό δεν[ENTER]έπιασε και δεν είχα άλλη επιλογή από το να[ENTER]επιστρέψω. Τώρα έχω όμως άλλη μια ευκαιρία χάρη[ENTER]σε σένα! Ας προχωρήσουμε μαζί.
+12947	Δεν μπορώ άλλο.
+12948	Εντάξει.
+12949	Τι, τα παρατάς από τώρα; Είσαι πολύ πιο αδύναμος[ENTER]απ' όσο νόμιζα.
+12950	Αν συγκεντρωθούμε, θα τα καταφέρουμε. Ας βγάλουμε[ENTER]από τη μέση μερικά τέρατα εδώ κοντά.
+12951	Σκότωσε διεφθαρμένους μοναχούς για να ανοίξεις το[ENTER]τελευταίο κομμάτι του μονοπατιού.[ENTER]Υπόλοιποι αντίπαλοι: %d
+12952	Τα παρατάς τόσο κοντά στο στόχο; Μπορώ να σου[ENTER]δώσω ένα μερίδιο της ανταμοιβής μου. Έλα τώρα...
+12953	Σκοτώθηκαν όλοι οι διεφθαρμένοι Μοναχοί. Πήγαινε[ENTER]πίσω στον Κυνηγό επικηρυγμένων.
+12954	Από μακριά βλέπω τον φύλακα που φυλάει το Ναό[ENTER]Φιδιών. Νομίζω πως θα καταφέρουμε να φτάσουμε[ENTER]στην είσοδο του βωμού χάρη σε σένα.
+12955	Διείσδυση
+12956	Βρήκα το βωμό. Καλύτερα να ρίξω μια ματιά εκεί[ENTER]και να μάθω πού είναι ο φύλακας.
+12957	Βρήκες επιτέλους το βωμό. Ευχαριστώ που[ENTER]συνεργάστηκες μαζί μου πάνω σε αυτό. Τώρα[ENTER]μπορούμε να περάσουμε κρυφά από τον φύλακα, να[ENTER]πάμε εκεί που κρύβεται η αρχηγός και να μάθουμε[ENTER]τι συμβαίνει. Φοβάμαι όμως πως μπορεί να μας δουν[ENTER]αν μείνουμε μαζί. Προτείνω λοιπόν να χωριστούμε[ENTER]και να προσπαθήσουμε να μαζέψουμε μερικές ακόμα[ENTER]χρήσιμες πληροφορίες στο δρόμο.
+12958	Εμένα μου αρκεί.
+12959	Φύγαμε!
+12960	Σχεδόν τα καταφέραμε! Σκέψου το ξανά, σε παρακαλώ.
+12961	Ελπίζω να είμαστε ακόμη ακέραιοι όταν[ENTER]συναντηθούμε πάλι.
+12962	Πέρνα κρυφά από τον Φύλακα του βωμού, μπες στο[ENTER]Ναό Φιδιών και μάθε τι συμβαίνει μέσα. Κυνήγησε[ENTER]30 Στρατιώτες Κάππα.[ENTER]Υπόλοιπα τέρατα: %d
+12963	Δεν ξεκίνησες ακόμη; Τότε θα πάω εγώ πρώτα.
+12964	Ο Ναός Φιδιών έχει εξερευνηθεί και κυνηγήθηκαν 30[ENTER]Στρατιώτες Κάππα. Πήγαινε πίσω στον Κυνηγό[ENTER]επικηρυγμένων.
+12965	Ήξερα ότι θα τα κατάφερνες! Εγώ έριξα μια ματιά[ENTER]μέσα, αλλά δεν μπόρεσα να βρω την αρχηγό.[ENTER]Εντάξει, τι να κάνουμε. Ίσως την επόμενη φορά.[ENTER]Εγώ πάντως έφτασα ως εδώ μόνο με τη βοήθειά σου[ENTER]και θέλω να σε ανταμείψω. Ορίστε, πάρε αυτό.
+13054	Ακολούθησε το σημείο που αναβοσβήνει στον μικρό[ENTER]χάρτη.
+13597	Ακόμη δεν βρήκες τον Ναό Φιδιών;[ENTER]Θα είναι δύσκολο να φτάσεις σε αυτό το μέρος.[ENTER]Φρόντισε να έχεις τις απαιτούμενες ικανότητες για[ENTER]να αντιμετωπίσεις τον Ναό Φιδιών.
 12679	Αίθουσα εισόδου στον Πύργο Κόλασης Sung Mahi
 12680	Θέλεις να μπεις στον Πύργο Κόλασης του Sung Mahi;
 12681	Ναι
@@ -12081,3 +12252,4 @@
 12673	Νίκησε τον Αρχηγό του Κόσμου!
 12674	Προκάλεσε στον Αρχηγό κόσμου την απαιτούμενη[ENTER]ελάχιστη ζημιά %d ή περισσότερη.
 12675	Ολοκλήρωση Καθημερινής αποστολής: Προκάλεσες την[ENTER]απαιτούμενη ελάχιστη ζημιά στον Αρχηγό κόσμου.
+12934	Ήρθα εδώ για να κερδίσω την ανταμοιβή γι' αυτό το[ENTER]τέρας. Κάποτε αυτό το μέρος ήταν γεμάτο[ENTER]φίδια-τέρατα κι ονομαζόταν Διάβαση Γιλάντ.[ENTER]Πρόσεξες όμως κάτι περίεργο; Όλα αυτά τα[ENTER]φίδια-τέρατα εξαφανίστηκαν.
