--- a/share/locale/gr/locale_string.txt
+++ b/share/locale/gr/locale_string.txt
@@ -692,6 +692,8 @@
 1693	Όλα τα φρούρια στην περιοχή %s καταστράφηκαν και η περιοχή δεν επηρεάζεται πλέον από τον Sung Mahi.
 1694	Ερημιά Seogan
 1695	Χάσμα Namgan
+1696	Η βελτίωση πέτυχε!
+1697	Δυστυχώς απέτυχε η βελτίωση!
 1698	Χάρη στην Ευλογία Ανοσίας ελευθερώθηκες από την Επιρροή του Sung Mahi.
 1699	Η Ευλογία Ανοσίας σου έληξε και βρίσκεσαι πάλι υπό την Κατάρα και την Επιρροή του Sung Mahi.
 17	[Συντεχνία] Δεν έχεις δικαίωμα να χρησιμοποιείς Ικανότητες Συντεχνίας.
@@ -718,8 +720,38 @@
 1718	[Προσωπικό προνομιούχο κατάστημα] Το %s πωλήθηκε. Παρακαλούμε παράλαβε τα χρήματά σου.
 1719	[Προσωπικό προνομιούχο κατάστημα] Αφού κλείσεις το κατάστημα, δεν μπορείς να το ανοίξεις πάλι για %d δευτερόλεπτα.
 172	[Gaya] Διαθέτεις ήδη το μέγιστο αριθμό Gaya.
+1720	Δεν μπορείς να το κάνεις αυτό όσο δημιουργείται ένα μπουντρούμι.
+1721	Δεν μπορείς να κάνεις άλλη ανάνηψη στον εαυτό σου. Θα τηλεμεταφερθείς έξω από το μπουντρούμι.
+1722	Έχεις ήδη λάβει την αμοιβή σου. Αν θέλεις να προσπαθήσεις ξανά, έλα πάλι αργότερα. Υπόλοιπος χρόνος: %d ώρ. %d λ.
+1723	Μπορείς να κάνεις ανάνηψη στον αυτό σου άλλες %d φορές.
+1724	Τώρα μπορείς να μπεις στο Ναό Φιδιών. Χρησιμοποίησε το ’γαλμα-Φίδι.
+1725	Το κατεστραμμένο Metin δεν αντιδρά. Εμφανίστηκαν πάλι όλα τα Metin.
+1726	Το κατεστραμμένο Metin δεν αντιδρά. Εμφανίστηκαν πάλι όλα τα Metin.
+1727	Κατέστρεψες %d Metin. Κατάστρεψε άλλα %d Metin.
+1728	Ο χρόνος έληξε. Θα τηλεμεταφερθείς έξω από το μπουντρούμι.
+1729	Θα είναι διαθέσιμο για %d λεπτά.
 173	[Gaya] Η λείανση ήταν επιτυχής!
+1730	Δεν μπορείς να προσθέσεις άλλο χρόνο στο χρονόμετρο του μπουντρουμιού.
+1731	Προστίθεται 1 λεπτό στο χρονόμετρο του μπουντρουμιού.
+1732	Εξόντωσες όλα τα τέρατα. Θα μεταφερθείς στο επίπεδο %d. Ως τότε απομένουν %d δευτερόλεπτα.
+1733	Κατέστρεψες όλα τα Metin. Θα μεταφερθείς στο επίπεδο %d. Ως τότε απομένουν %d δευτερόλεπτα.
+1734	Το κομμάτι προστέθηκε στο φιδοκέφαλο. Δεν συμβαίνει τίποτα όμως.
+1735	Ξεκλειδώθηκαν όλες οι Φιδοστήλες. Επίπεδο %d σε %d δευτερόλεπτα.
+1736	Εμφανίζεται ο ιδιαίτερος Σιδεράς Ναού Φιδιών!
+1737	Εμφανίζεται ο Σιδεράς Ναού Φιδιών!
+1738	Εξόντωσες όλα τα τέρατα και μπορείς τώρα να μπεις στο επίπεδο αρχηγού.
+1739	Ολοκλήρωσες με επιτυχία τον Ναό Φιδιών! Θα τηλεμεταφερθείς έξω από το μπουντρούμι σε %d δευτ.
 174	[Gaya] Η λείανση απέτυχε.
+1740	Κατάστρεψε τους Λίθους Metin με τη σωστή σειρά.
+1741	Σκότωσε όλα τα τέρατα.
+1742	Πάρε τα κλειδιά από τα τέρατα και ξεκλείδωσε το κελί.
+1743	Πρόσθεσες ένα κομμάτι στο φιδοκέφαλο.
+1744	Σκότωσε τον αρχηγό.
+1745	’νοιξες!
+1746	Πρέπει πρώτα να ξεκλειδώσεις την άλλη στήλη.
+1747	Η φυλακή ξεκλειδώθηκε. Ο Σιδεράς σου χαμογελάει.
+1748	Αυτό το κλειδί δεν ξεκλείδωσε τη φυλακή κι ο Σιδεράς είναι ακόμη φυλακισμένος.
+1749	Αυτό το κομμάτι δεν μπαίνει στο φιδοκέφαλο.
 175	[Gaya] Η λίστα αντικειμένων ανανεώθηκε.
 1752	Πρέπει να γεμίσεις τουλάχιστον 1 σφαίρα ΕΜΠ στο επίπεδο 120, για να φτάσεις στο επίπεδο πρωταθλητή.
 1753	Πρέπει να ολοκληρώσεις το μπουντρούμι «’μυνα πλοίου».
@@ -730,15 +762,21 @@
 1758	[Προσωπικό προνομιούχο κατάστημα] Δεν μπορείς να το κάνεις αυτό όσο διαχειρίζεσαι αντικείμενα.
 176	Ο Ανιχνευτής Γεγονότων εξαφανίστηκε.
 1760	[Μπόνους κειμηλίων] Αυτό δεν γίνεται με ανοιχτό παράθυρο Κειμηλίων ψυχής.
+1761	%s μέλη της ομάδας έχουν φύγει από τη μάχη.
+1762	Έχεις άλλα %d λεπτά.
 1763	[Προσωπικό προνομιούχο κατάστημα] Δεν μπορείς να μονομαχήσεις εδώ.
 1764	[Προσωπικό προνομιούχο κατάστημα] Τα χρήματα που μπορείς να παραλάβεις δεν ανανεώνονται όταν διαχειρίζεσαι αντικείμενα.
+1765	Ο τελικός αρχηγός του Ναού Φιδιών εμπφανίστηκε!
 1766	[Προσωπικό προνομιούχο κατάστημα] Εδώ έχει ήδη ανοίξει ένα κατάστημα. Βρες μια άλλη θέση, για να ανοίξεις το κατάστημά σου.
+1767	Δεν μπορείς να το βελτιώσεις αυτό όσο έχεις καλέσει ένα κατοικίδιο που μπορεί να ανέβει επίπεδο.
 177	[Gaya] Δεν έχεις αρκετά Gaya.
 178	[Gaya] Δεν μπορείς να αγοράσεις αυτό το αντικείμενο.
 179	[Gaya] Ο κατάλογός σου είναι γεμάτος.
 18	[Συντεχνία] Έχεις ρόλο παρατηρητή, επειδή έχεις φτάσει στο όριο των αναστάσεων.
 180	[Gaya] Δεν έχεις «Επαναφορά Εμπορίου Gaya».
+1802	Αυτό θα είναι διαθέσιμο όταν ξεκινήσει η μάχη.
 181	[Gaya] Πρέπει πρώτα να ανοίξεις το Εμπόριο Gaya.
+1812	Αυτό δεν μπορείς να το κάνεις την ώρα του εμπορίου.
 182	[Gaya] Δεν μπορείς να ανοίξεις άλλη θέση στο Εμπόριο Gaya.
 183	[Gaya] Δεν έχεις αρκετά %s. Χρειάζεσαι άλλα %d για να ανοίξεις άλλη μια θέση.
 184	[Gaya] Το Εμπόριο Gaya δεν είναι διαθέσιμο αυτήν τη στιγμή.
