--- a/share/locale/ru/locale_quest.txt
+++ b/share/locale/ru/locale_quest.txt
@@ -1,3 +1,6 @@
+13305	Эй! У вас есть ключ, чтобы меня освободить?
+13306	Освободите меня, прошу. Мне что, никто не поможет?
+13307	Эй, вы! Прошу вас, найдите ключ!
 2	Я вам уже все рассказал о силах которые нам[ENTER]потребуются, чтоб победить Сунг Махи.[ENTER][ENTER]Поторопитесь и найдите Капитана.[ENTER][ENTER]Возвращайтесь когда у вас будет достаточное[ENTER]количество сукна.
 1	Особый материал
 3	Увеличить свою силу
@@ -829,6 +832,26 @@
 12585	Весь темный папоротник у меня.[ENTER]Теперь обратно к Шагирабу.
 12591	Не подгоняйте меня! Даже этот увядший темный[ENTER]папоротник поможет внести вклад в науку.[ENTER]Приходите попозже и принесите мне новое растение.[ENTER]Оставшееся время перезарядки: %s
 12713	О, простите.[ENTER]Я еще не до конца изучил последний темный[ENTER]папоротник.[ENTER]Возвращайтесь позже.[ENTER]Оставшееся время перезарядки: %s
+13038	Да
+13039	Нет
+13041	Это доступно только лидеру.
+13042	Начать бой
+13043	Сдаться
+13044	Выйти
+13045	Хотите начать подземелье «Храм змеи»?
+13046	Храм змеи
+13047	Вы хотите уйти отсюда? Вы можете вернуться, пока[ENTER]бой не начался.
+13048	Созданный запуск «Храма змеи» будет отменен.[ENTER]Хотите сдаться?
+13056	Все участники группы должны быть на одном месте.
+13061	Идите на уровень с боссом.
+13062	Кузнец Храма змеи
+13063	Хотите перейти на уровень с боссом?
+13064	Кузнец для улучшения перчаток
+13065	Ха, я могу улучшить для вас пару перчаток. Для[ENTER]этого даже материалы не нужны! Просто дайте мне[ENTER]перчатки, и я их улучшу. У моего улучшения такой[ENTER]же эффект, как у Свитка благословения.
+13613	Хотите выйти из подземелья?
+13614	Сейчас вы не можете сбросить число входов.
+13615	Хотите сбросить входы в Храм змеи?
+13616	Число ваших входов в Храм змеи сброшено до 5.
 679	Убейте Джинь Хи
 678	Месть за Торговца кольцами
 680	Просьба Пожилой женщины: Её друг, торговец[ENTER]кольцами, был убит Джинь-Хи из клана Белой[ENTER]клятвы. Убейте 30 Джинь-Хи чтобы отомстить за[ENTER]смерть Торговца кольцами.
@@ -1358,6 +1381,30 @@
 989	Вот ваш энергетический кристалл. Но это только[ENTER]первая попытка, она всегда успешна. Алхимия -[ENTER]непредсказуемая наука, несколько ошибок приведут[ENTER]к неудаче! Всегда есть маленький шанс, что[ENTER]эксперимент может потерпеть неудачу.
 990	К сожалению, попытка потерпела неудачу. Я не смог[ENTER]произвести энергетический кристалл. Моя[ENTER]технология блестяща, но процесс полон рисков.[ENTER]Вещи не всегда работают согласно плану. В[ENTER]следующий раз я уверен, что все получится!
 991	Я знал это! Моя технология блестяща![ENTER]Вот ваш энергетический кристалл. Это, конечно,[ENTER]прекрасный экземпляр! Вы можете почувствовать его[ENTER]силу?
+13540	Вы хотите войти в Храм змеи?
+13014	Войти в Храм змеи
+13020	Важные приготовления
+13021	Мне нужно найти статую змеи, чтобы войти в Храм[ENTER]змеи.
+13022	Чтобы хоть немного продвинуться вперед в[ENTER]подземелье, вам много чего понадобится... Шляпа,[ENTER]кнут, мешочек с песком размером со статуэтку...[ENTER]Всё это я могу для вас сделать.
+13023	Но если хотите войти в храм, принесите мне %d[ENTER]змеиных чешуек для снаряжения. А поскольку любая[ENTER]работа чего-то да стоит, это обойдется вам в %d[ENTER]янг. Можете принести мне всё это?
+13024	Для статуи змеи нужно %d змеиных чешуек. Их можно[ENTER]найти у монстров поблизости.
+13025	Чтобы войти в Храм змеи, мне нужно раздобыть %d[ENTER]змеиных чешуек, которые требует статуя.[ENTER]Осталось еще: %d
+13026	Мне нужно больше змеиных чешуек...
+13027	Вы получили змеиные чешуйки. Собрано предметов: %d
+13028	Это все чешуйки, которые нужны статуе змеи.[ENTER]Возвращайтесь к ней.
+13029	Все %d змеиных чешуек у меня! Нужно возвращаться[ENTER]к статуе змеи.
+13030	Собрали все змеиные чешуйки? Тогда мне нужно еще[ENTER]%d янг – и я дам вам доступ в храм.
+13031	Передать всё
+13032	Прервать
+13033	У вас не хватает денег...
+13034	Хорошо. Всё готово! Вот ваши вещи. Удачи. Если[ENTER]вам нужно будет снаряжение для еще одной[ENTER]экспедиции, возвращайтесь ко мне.
+13035	Создать
+13036	Войти
+13037	Вы хотите войти в Храм змеи? У вас еще %d[ENTER]возможности(-ей) входа.
+13040	Хотите создать запуск «Храма змеи»?
+13049	Сегодня вы не можете зайти еще раз.
+13055	Вы не можете создать новый запуск, пока не[ENTER]забрали все награды.
+13182	Осталось змеиных чешуек
 992	Руководитель страны развлечений
 993	Желаете покинуть страну развлечений?
 994	Желаете отправиться в страну развлечений?
@@ -1626,6 +1673,17 @@
 10167	Понизьте уровень темной энергии в Храме Зодиака с[ENTER]помощью Анимасфер, пока она не стала слишком[ENTER]сильной. Войдя в Храм, вы автоматически начнете[ENTER]использовать Анимасферы. Внимание: задание не[ENTER]выполнить, если вы активировали Метку Стражников.
 10168	Готово. Отправляйтесь к Монаху Милбону и заберите[ENTER]свой подарок.
 10169	Спасибо, Храм пока что в безопасности. Вот ваш[ENTER]подарок. Но энергия опять будет прирастать.[ENTER]Возвращайтесь через 24 часа, чтобы снова понизить[ENTER]ее Анимасферами. Разумеется, за это вы получите[ENTER]еще одну награду.
+13586	Войти в Таинственное подземелье
+13587	Загадочный алтарь
+13588	Эй! Я знаю, что превратился в камень. В этом[ENTER]виновато заклятие Сунг Махи! Но я шаман и могу[ENTER]кое-что рассказать вам об этом крайне интересном[ENTER]месте...[ENTER]Если у вас есть Таинственный билет, я могу[ENTER]отправить вас в Таинственное подземелье.[ENTER]Хотите попробовать?
+13589	Да
+13590	Нет
+13591	О! Я не могу вас впустить без Таинственного[ENTER]билета.
+13598	Сейчас вход воспрещен.
+13609	Выход
+13610	Хотите выйти из подземелья?
+13611	Да
+13612	Нет
 1209	Отказать
 1208	Почему ты плачешь?
 1210	Конечно я помогу вам. Миссию несложно выполнить,[ENTER]и я понимаю, что вы хотите вспомнить все.[ENTER]Увидимся!
@@ -7628,6 +7686,15 @@
 12707	Вы получаете эликсиры солнца (М): %d.
 12708	Идите на праздник к торговцу броней.
 12709	Вы получаете ритуальные камни: %d.
+12971	Потаенная долина
+12972	Ходят слухи о том, что найдена новая долина.[ENTER]Отправляйтесь к Конфуцию.
+12973	Давненько мы не виделись. Где вы пропадали?[ENTER]Нашлось потаенное место, над которым все столько[ENTER]ломали голову.
+12974	По слухам, путь туда извилист и коварен. Я хочу[ENTER]попросить вас отправиться туда и узнать больше об[ENTER]этой скрытой от чужих глаз долине. Когда придете[ENTER]туда, найдете стражника, которого я недавно туда[ENTER]отправил.
+12975	Открыта новая область. Отправляйтесь к Змеиному[ENTER]стражнику.
+12976	Чего стоите? Чтобы попасть в новую область, нужно[ENTER]сначала отправиться на равнину Донган.
+12977	Отправляйтесь в новую область, чтобы встретиться[ENTER]там со Змеиным стражником.
+12978	А ты еще кто? Ха, так тебя прислал Конфуций?[ENTER]Глазам своим не верю... Зачем он прислал такого[ENTER]желторотика в такую суровую землю?
+12979	Конфуций велел отдать это тебе, когда придешь.[ENTER]Заходи попозже, для тебя найдутся еще задания.
 6353	Новая жизнь
 6354	Вы приходите в себя и чувствуете себя очень[ENTER]странно.[ENTER]Что произошло? Разыщите мудреца Мионгхоранг. Он[ENTER]вам все объяснит.
 6355	Добро пожаловать ликан!
@@ -7965,11 +8032,11 @@
 6606	Общие очки
 6607	Наивысшее количество очков за игру
 6608	10 игроков с наивысшим количеством очков получат[ENTER]дополнительные призы.
-6610	1 место: %s раз(а) x %d
+6610	1 место: %s %d x
 6609	Закрыть
-6611	2 место: %s раз(а) x %d
-6612	3 место: %s раз(а) x %d
-6613	4–10 места: %s раз(а) x %d
+6611	2 место: %s %d x
+6612	3 место: %s %d x
+6613	4–10 места: %s %d x
 6614	1 место: %s, %d
 6615	2 место: %s, %d
 6616	3 место: %s, %d
@@ -9808,6 +9875,12 @@
 12080	Прервать
 12081	Ваша параметры сброшены.
 12082	У вас нет параметров, которые можно сбросить.
+13057	Вы успешно прошли Храм змеи и можете забрать свои награды. Поговорите со Статуей змеи.
+13058	Награды получены
+13059	Статуя змеи
+13060	Вы одолели всех этих злобных змей. Вы заслужили[ENTER]этот ларец.
+13606	Вы получаете змеиное сокровище x %d.
+13607	Вы получаете змеиную пыль x %d.
 8044	У вас слишком низкий уровень!
 8045	Вы не можете ехать пока вы трансформированы!
 8046	Вы уже едете. Сойдите для смены животного.
@@ -9951,6 +10024,48 @@
 11499	Нет, я останусь здесь.
 11500	Голубой дракон (ХР) вернулся!
 11679	Через три минуты все бойцы перенесутся из Грота[ENTER]изгнанников (ХР).
+12980	Что такое Храм змеи?
+12981	Чтобы найти потаенный храм, мне нужно поговорить[ENTER]со Змеиным стражником.
+12982	Привет, желторотик. Как у тебя со смекалкой? Если[ENTER]пойдешь по тропинке позади меня, выйдешь к[ENTER]огромному храму. Уже знаешь про Храм змеи?
+12983	На пути тебе встретится целая куча опасных[ENTER]монстров. Бьюсь об заклад, ты сразу возьмешь ноги[ENTER]в руки и сбежишь. Но если храбрости хватит,[ENTER]сможешь найти там сокровища.
+12984	Как мне зайти?
+12985	Ха-ха-ха! Вообще никак, но я тебя впущу. Испытаем[ENTER]твою храбрость.
+12986	Смотрю, твои глаза так и горят энергией! Ты явно[ENTER]можешь убить для меня пару монстров поблизости! А[ENTER]то уж больно утомительно зачищать от них эти[ENTER]земли.
+12987	Поохотьтесь на монстров поблизости, чтобы[ENTER]выдержать испытание Змеиного стражника.
+12988	Змеиный стражник хочет, чтобы вы убили %d[ENTER]монстров у прохода Йилад.[ENTER]Осталось монстров: %d
+12989	Смотрю, с монстрами у тебя совсем не идет... Ты[ENTER]что, сдаешься?
+12990	Все монстры для Змеиного стражника убиты! Нужно[ENTER]возвращаться к нему.
+12991	Все монстры для Змеиного стражника убиты! Нужно[ENTER]возвращаться к нему.
+12992	О. А ты храбрее, чем я думал. Я посмотрел на тебя[ENTER]в бою – и вспомнил о днях своей молодости.
+12993	Ну да ладно. Вот твоя награда за пройденное[ENTER]испытание.
+13180	Оставшиеся монстры
+13603	Вы убили %d монстров. Осталось: %d
+12994	Храм змеи?!
+12995	Кто-то открыл новую область. Мне нужно идти к[ENTER]Змеиному стражнику, он охраняет это место.
+12996	Привет, желторотик. Выглядит так, словно ты[ENTER]хочешь зайти в долину...
+12997	Но в таком случае сначала окажи мне услугу![ENTER]Монстры поблизости совсем распоясались. Тут мне[ENTER]очень даже пригодится твоя помощь.
+12998	Убей-ка для меня этих монстров и принеси железную[ENTER]стружку. Сделаешь? Говорят, на железной стружке[ENTER]можно неплохо заработать.
+12999	Да.
+13000	Нет.
+13001	Ну, тогда, боюсь, и в долину тебе нельзя!
+13002	Принесите железную стружку (%d), которую требует[ENTER]Змеиный стражник. Их можно найти у монстров[ENTER]поблизости.
+13003	Что, так быстро получилось всё собрать? Эй! Ты[ENTER]что, считать не умеешь? Я сказал %d!
+13004	Змеиный стражник требует принести ему железную[ENTER]стружку (%d). Тогда он даст мне пройти в долину.[ENTER]Нужно охотиться на монстров рядом с проходом[ENTER]Йилад, чтобы добыть стружку.[ENTER]Осталось добыть стружки: %d
+13005	Вы получили железную стружку. Собрано: %d
+13006	Вся стружка, которую хочет Змеиный стражник, у[ENTER]меня. Нужно возвращаться к нему.
+13007	Вся стружка, которую хочет Змеиный стражник, у[ENTER]меня. Нужно возвращаться к нему.
+13008	Я как знал, что это задание для тебя! Как раз[ENTER]столько, сколько нужно!
+13009	Теперь я расскажу тебе, как пройти в долину. Как[ENTER]дойдешь до другой стороны, увидишь большой храм.[ENTER]Если захочешь потом туда зайти, приходи еще раз[ENTER]ко мне.
+13010	Вы можете получить доступ в Храм змеи у Змеиного[ENTER]стражника.
+13011	А, это опять ты. Хочешь войти?
+13012	Тогда принеси мне железную стружку, как в прошлый[ENTER]раз, и я дам тебе билет. На этот раз нужно %d ед.[ENTER]стружки.
+13013	Храм змеи?! (Повтор)
+13015	Вы хотите войти в Храм змеи?
+13016	Подтвердить
+13017	Отказаться
+13018	Поговорите со Змеиным стражником, чтобы войти в[ENTER]Храм змеи.
+13019	Эта долина очень опасна. Берегись и смотри в оба.
+13181	Осталось железной стружки
 8167	Башня Немера
 8168	Входите в башню Немера. Максимальное время[ENTER]пребывания составляет один час. После окончания[ENTER]или отмены следует подождать 4 часа, лишь тогда[ENTER]вы сможете войти вновь.
 8169	Уничтожьте всех врагов!
@@ -11793,6 +11908,62 @@
 12884	Вы уничтожили все Метины Цзинь. Сообщите об этом[ENTER]Конфуцию на равнине Донган.
 12885	Возвращайтесь к Конфуцию и сообщите о положении[ENTER]вещей.
 12886	Его влияние ослабло, но этого всё еще[ENTER]недостаточно. Но важна каждая мелочь. У меня для[ENTER]вас маленький подарок в знак благодарности.
+12914	Незнакомый край
+12915	Мне хотелось выяснить, что кроется за этими[ENTER]странными слухами, и они привели меня в[ENTER]незнакомый край. Нужно осмотреться получше и[ENTER]выяснить, отсюда ли пошли невероятные слухи.
+12916	Я вижу кого-то вдалеке. Давайте осторожно[ENTER]приблизимся.
+12917	В углу сидит человек. Кажется, нервничает. Надо с[ENTER]ним поговорить.
+13541	Добавлено новое задание.
+12918	Странный человек
+12919	Идите к странному человеку и поговорите с ним.
+12920	Ёлки-палки!
+12921	Ты еще кто?! И откуда?
+12922	Эй! Ты кто? Я охотник за головами, прошел сюда[ENTER]долгий путь, чтобы разобраться со слухами об этой[ENTER]деревне. Ты тоже? Теперь мне нужно кое-что здесь[ENTER]выяснить. Если ты мне поможешь, я расскажу, что[ENTER]успел выяснить.
+12923	Отклонить
+12924	Я тебе помогу.
+12925	Ну и трусишка...
+12926	Мне кажется, тут начинается что-то большое. Для[ENTER]начала нужно осмотреться и убить испорченных[ENTER]солдат. Там слишком опасно, так что после этого[ENTER]встретимся здесь.
+12927	Убейте испорченных солдат.[ENTER]Врагов осталось: %d
+12928	Не теряй времени! Я тебе ничего не расскажу, если[ENTER]будешь стоять тут без дела.
+12929	Все испорченные солдаты убиты, пора вернуться к[ENTER]Охотнику за головами.
+12930	Отличная работа. Вот твоя награда. Я пока[ENTER]подумаю, как лучше поступить дальше. Так что[ENTER]заходи попозже.
+12931	Странные слухи
+12932	Нужно спросить Охотника за головами про слухи о[ENTER]проходе Йилад.
+12933	Кажется, картина начинает проясняться. Слухи?![ENTER]Откуда ты о них знаешь? Недалеко отсюда есть[ENTER]потаенный алтарь, и рядом с ним обитает крайне[ENTER]могучий монстр. Но ты об этом, похоже, уже[ENTER]знаешь. Ладно, тогда еще кое-что расскажу.
+12935	Они все ушли?
+12936	Не совсем. Они возвели Храм змеи и набирают там[ENTER]силу. Моя цель – убить их предводительницу и[ENTER]забрать награду за ее голову. Но к ней непросто[ENTER]подобраться, ведь у алтаря неустанно бдит[ENTER]стражник. Не хочешь помочь мне разобраться с[ENTER]этими монстрами? В одиночку через них очень[ENTER]сложно пробиться.
+12937	Нет, не хочу.
+12938	Я знал, ты не оставишь меня в беде. Помощь[ENTER]никогда не повредит. Что ж, тогда надо[ENTER]отправляться к алтарю.
+12939	Мне нужно убить испорченных воинов, чтобы[ENTER]расчистить путь.[ENTER]Осталось монстров: %d
+12940	Ну, как дела? Есть успехи? Непохоже на то...[ENTER]Поторопись, у нас мало времени.
+12941	Все испорченные воины убиты, путь свободен. Нужно[ENTER]возвращаться к Охотнику за головами.
+12942	Все испорченные воины убиты. Возвращайтесь к[ENTER]Охотнику за головами.
+12943	Отличная работа. Теперь я вижу наш путь. Скорее,[ENTER]идем в следующую область. Похоже, мы всё ближе к[ENTER]их логову.
+12966	Разреши?
+12967	Ладно, тогда возвращайся. Ищи меня здесь, если[ENTER]передумаешь.
+12944	Потаенный алтарь
+12945	Кажется, уже можно различить потаенный алтарь.[ENTER]Скорее назад к Охотнику за головами.
+12946	Да, точно! Мне удалось убить всех монстров и[ENTER]добраться до алтаря. Но стражник меня не впустил.[ENTER]Никакие просьбы на него не подействовали, так что[ENTER]в итоге пришлось возвращаться. Но теперь у меня[ENTER]есть еще один шанс благодаря тебе! Пойдем вперед[ENTER]вместе.
+12947	Я больше не могу.
+12948	Хорошо.
+12949	Что, уже сдаешься? А ты слабее, чем мне казалось.
+12950	Если поднажмем вместе, то справимся. Давай[ENTER]сначала разберемся с монстрами поблизости.
+12951	Убейте испорченных монахов, чтобы до конца[ENTER]расчистить путь.[ENTER]Врагов осталось: %d
+12952	Сдаешься, когда до цели так близко? Могу[ENTER]предложить тебе часть моей награды. Ну же, давай.
+12953	Все испорченные монахи убиты. Возвращайтесь к[ENTER]Охотнику за головами.
+12954	Вдали уже можно видеть фигуру стражника,[ENTER]охраняющего Храм змеи. Похоже, благодаря тебе мы[ENTER]доберемся до входа к алтарю.
+12955	Проникновение
+12956	Мне удалось найти алтарь. Нужно осмотреться и[ENTER]понять, где стражник.
+12957	Наконец-то мы нашли алтарь. Спасибо, что не[ENTER]бросаешь меня в беде. Теперь можно попробовать[ENTER]проскользнуть мимо стражника к предводительнице и[ENTER]выяснить, что там происходит. Но я боюсь, она[ENTER]может нас заметить, если мы будем вместе. Так что[ENTER]предлагают разделиться и попытаться добыть[ENTER]побольше полезной информации по дороге.
+12958	С меня хватит.
+12959	Пошли!
+12960	Почти добрались. Еще раз хорошенько всё обдумай.
+12961	Надеюсь, еще увидимся живыми и здоровыми.
+12962	Проберись мимо стражника алтаря в Храм змеи и[ENTER]выясни, что происходит внутри. Убейте 30[ENTER]каппа-солдат.[ENTER]Осталось монстров: %d
+12963	Ты как, держишься? Тогда я иду дальше.
+12964	Храм змеи разведан, 30 каппа-солдат убито.[ENTER]Возвращайтесь к Охотнику за головами.
+12965	Я знал, что ты справишься! Я уже успел[ENTER]осмотреться, но предводительницу пока не нашел.[ENTER]Ничего не поделаешь. Может быть, в следующий раз.[ENTER]В любом случае один я бы сюда не добрался, так[ENTER]что хочу наградить тебя за помощь. Вот, возьми.
+13054	Следуйте за мигающей точкой на мини-карте.
+13597	Что, никак не найдешь Храм змеи?[ENTER]До него не так просто добраться. Убедись, что у[ENTER]тебя хватает сил, чтобы бросить ему вызов.
 12679	Вестибюль адской башни Сунг Махи
 12680	Хотите войти в адскую башню Сунг Махи?
 12681	Да
@@ -12081,3 +12252,4 @@
 12673	Победите мирового босса!
 12674	Нанесите мировому боссу нужный минимальный урон в[ENTER]%d или больше.
 12675	Задание дня выполнено: вы нанесли мировому боссу[ENTER]нужный минимальный урон.
+12934	Я пришел сюда, чтобы получить награду за голову[ENTER]этого монстра. Когда-то тут было полно чудовищных[ENTER]змей, и это место называлось проходом Йилад. Но[ENTER]тебе ничего не бросилось в глаза? Все эти[ENTER]змееподобные монстры пропали.
