--- a/share/locale/ru/locale_string.txt
+++ b/share/locale/ru/locale_string.txt
@@ -692,6 +692,8 @@
 1693	Все заставы в земле %s уничтожены, и она больше не находится под контролем Сунг Махи.
 1694	Пустошь Сёган
 1695	Ущелье Намган
+1696	Улучшение прошло успешно!
+1697	К сожалению, улучшение не удалось!
 1698	Благословение иммунитета освободило вас от влияния Сунг Махи.
 1699	Действие благословения иммунитета окончилось, и вы снова находитесь под влиянием и заклятием Сунг Махи.
 17	[Гильдия] У вас нет права использовать навыки гильдии.
@@ -718,8 +720,38 @@
 1718	[Личная премиум-лавка] Предмет %s продан. Заберите деньги.
 1719	[Личная премиум-лавка] Вы не можете открывать лавку %d сек. после того, как ее закрыли.
 172	[Gaya] У вас уже макс. количество Gaya.
+1720	Это действие недоступно, пока создается подземелье.
+1721	Вы больше не можете ожить. Сейчас вас перенесут из подземелья.
+1722	Вы уже получили награду. Если вы хотите попробовать еще раз, заходит позже. Осталось: %d ч. %d мин.
+1723	Вы можете ожить еще %d раз(а).
+1724	Теперь вы можете войти в Храм змеи. Для этого используйте статую змеи.
+1725	Уничтоженный метин не реагирует. Все метины появились снова.
+1726	Уничтоженный метин не реагирует. Все метины появились снова.
+1727	Вы уничтожили %d метина(-ов). Уничтожьте еще %d метина(-ов).
+1728	Время вышло. Сейчас вас перенесут из подземелья.
+1729	Это доступно всего %d мин.
 173	[Gaya] Шлифовка удалась.
+1730	Нельзя больше продлевать таймер подземелья.
+1731	Таймер подземелья продлевается на 1 минуту.
+1732	Вы убили всех монстров. Вы перенесетесь на %d уровень. До этого момента остается %d сек.
+1733	Вы уничтожили все метины. Вы перенесетесь на %d уровень. До этого момента остается %d сек.
+1734	Вы приложили осколок к змеиной голове. Но ничего не произошло.
+1735	Все змеиные колонны отключены. %d уровень через %d сек.
+1736	Появляется особенный кузнец Храма змеи!
+1737	Появляется кузнец Храма змеи!
+1738	Вы убили всех монстров и можете перейти на уровень с боссом.
+1739	Вы прошли Храм змеи. Через %d сек. вас перенесут из подземелья.
 174	[Gaya] Шлифовка не удалась.
+1740	Разрушьте Камни Метина в правильном порядке.
+1741	Убейте всех монстров.
+1742	Заберите у монстров ключ и откройте камеру.
+1743	Вы приложили к змеиной голове осколок.
+1744	Убейте босса.
+1745	Открыто!
+1746	Сначала нужно отключить другую колонну.
+1747	Тюрьма открыта. Кузнец улыбается.
+1748	Этот ключ не откроет тюрьму и не освободит кузнеца.
+1749	Этот осколок не подходит к змеиной голове.
 175	[Gaya] Список предметов обновлен.
 1752	Чтобы достичь чемпионского уровня, нужно заполнить целиком хотя бы 1 шарик опыта на 120 уровне.
 1753	Нужно завершить «Защиту корабля».
@@ -730,15 +762,21 @@
 1758	[Личная премиум-лавка] Вы не можете этого сделать, пока управляете товарами.
 176	Детектор событий исчез.
 1760	[Реликтовый бонус] Это невозможно с открытым окном реликта души.
+1761	%s участника(-ов) группы вышли из боя.
+1762	У вас еще %d минут(ы).
 1763	[Личная премиум-лавка] Здесь нельзя устраивать дуэль.
 1764	[Личная премиум-лавка] Данные о деньгах, которые можно забрать, не обновляются, пока вы управляете товарами.
+1765	Появился финальный босс Храма змеи!
 1766	[Личная премиум-лавка] Здесь уже открыта лавка. Найдите другое место, на котором можно открыть лавку.
+1767	Это нельзя сделать, пока у вас призван подлежащий развитию питомец.
 177	[Gaya] У вас недостаточно Gaya.
 178	[Gaya] Вы не можете купить этот предмет.
 179	[Gaya] Ваш инвентарь полон.
 18	[Гильдия] Вы находитесь в режиме наблюдателя, так как уже были воскрешены максимальное количество раз.
 180	[Gaya] У вас нет «Сбросить биржу Gaya».
+1802	Вы получите доступ, когда начнется бой.
 181	[Gaya] Сначала нужно открыть биржу Gaya.
+1812	Этого нельзя делать во время торговли.
 182	[Gaya] Больше нельзя открывать мест на бирже Gaya.
 183	[Gaya] У вас недостаточно %s. Вам нужно еще %d, чтобы открыть еще одно место.
 184	[Gaya] Биржа Gaya сейчас недоступна.
